Update for Patch v3.5.3 - checksum: c1ba

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -113,8 +113,8 @@
  IS_ARCHAEOLOGICAL_CURRENT_STAGE_TRIGGER:0 "Current stage level $COMPARE$ $NUM_COMPARE$"
  IS_NOT_ARCHAEOLOGICAL_SITE_CLUES_TRIGGER:0 "Site clues NOT $COMPARE$ $NUM_COMPARE$"
  IS_ARCHAEOLOGICAL_SITE_CLUES_TRIGGER:0 "Site clues $COMPARE$ $NUM_COMPARE$"
- IS_NOT_ARCHAEOLOGICAL_SITE_DAYS_LEFT_TO_ROLL_TRIGGER:0 "Days left until new die roll NOT $COMPARE$ $NUM_COMPARE$"
- IS_ARCHAEOLOGICAL_SITE_DAYS_LEFT_TO_ROLL_TRIGGER:0 "Days left until new die roll $COMPARE$ $NUM_COMPARE$"
+ IS_NOT_ARCHAEOLOGICAL_SITE_DAYS_LEFT_TO_ROLL_TRIGGER:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้าใหม่ ไม่$COMPARE$ $NUM_COMPARE$"
+ IS_ARCHAEOLOGICAL_SITE_DAYS_LEFT_TO_ROLL_TRIGGER:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้าใหม่ $COMPARE$ $NUM_COMPARE$"
  IS_NOT_ARCHAEOLOGICAL_SITE_LAST_EXCAVATOR_TRIGGER:0 "Last excavator was NOT $COUNTRY$"
  IS_ARCHAEOLOGICAL_SITE_LAST_EXCAVATOR_TRIGGER:0 "Last excavator was $COUNTRY$"
  IS_NOT_ARCHAEOLOGICAL_SITE_TYPE_TRIGGER:0 "Site is NOT $TYPE$"
@@ -138,7 +138,7 @@
  alert_activate_relic_title:0 "Relic Activation Available"
  alert_activate_relic_instant:0 "It is now possible to activate one of your Relics."
  CHAPTER_TITLE:0 "Chapter $CHAPTER$"
- CHAPTER_PROGRESS:0 "Days left until roll: $DAYS|Y$"
+ CHAPTER_PROGRESS:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้า: $DAYS|Y$"
  DIFFICULTY_EASY:0 "§Gง่าย§!"
  DIFFICULTY_NORMAL:0 "§YNormal§!"
  DIFFICULTY_HARD:0 "§HHard§!"
@@ -149,12 +149,12 @@
  ARCHAEOLOGICAL_SITE_BREAKTHROUGH:0 "โอกาสสำเร็จ"
  VIEW_SITE:1 "£archaeology£ ดูสถาน"
  SHOW_FIRST_CONTACT:0 "แสดงการติดต่อครั้งแรก"
- ARCHAEOLOGICAL_SITE_FINISHED:0 "Site has been fully excavated"
+ ARCHAEOLOGICAL_SITE_FINISHED:0 "สถานที่ถูกขุดอย่างสมบูรณ์"
  ARCHAEOLOGICAL_SITE_LOCKED:0 "ไฟล์การขุดถูกล็อก"
  alert_site_event_title:0 "สถานที่โบราณคดีที่รอดำเนินการ"
  alert_site_event_instant:0 "Something has happened on one of the archaeological sites we are currently excavating."
  ARCHAEOLOGICAL_SITE_REDACTED:0 "§R -REDACTED: This Chapter was excavated by an Alien Civilization.- §!"
- EXPEDITION_LOG_ROLL_TOOLTIP:0 "§HPhase Results§!\nClues Gained: $GAINED|Y$\n\nResult: $RESULT|Y$\n  Roll: $ROLL|Y$\n  Clues: $CLUES|Y$\n  Skill Bonus: $BONUS|Y$\n  Difficulty: $DIFFICULTY|R$\n\n§ERoll Outcomes:§!\n§RFailure§!: Results §Y5§! or less add §Y0§! clues.\n§YProgress§!: Results between §Y6-10§! add §Y1§! clues.\n§GProgress§!: Results between §Y11-13§! add §Y2§! clues."
+ EXPEDITION_LOG_ROLL_TOOLTIP:0 "§Hผลลัพธ์ของเฟส§!\nเบาะแสที่ได้รับ: $GAINED|Y$\n\nผล: $RESULT|Y$\n  รอบการดำเนินการ: $ROLL|Y$\n  เบาะแส: $CLUES|Y$\n  โบนัสสกิล: $BONUS|Y$\n  ความยาก: $DIFFICULTY|R$\n\n§Eผลลัพธ์ของการดำเนินการ:§!\n§Rล้มเหลว§!: ผล §Y5§! หรือเพิ่มเบาะแสน้อยกว่า §Y0§! เบาะแส\n§Yความคืบหน้า§!: ผลลัพธ์ระหว่าง §Y6-10§! และ §Y1§! เบาะแส\n§Gความคืบหน้า§!: ผลลัพธ์ระหว่าง §Y11-13§! เพิ่ม §Y2§! เบาะแส"
  EXPEDITION_LOG_CLUE_TOOLTIP:0 "เบาะแสที่ได้รับ: $CLUES|Y$"
  ADD_RELIC_EFFECT:1 "Relic found: $NAME|Y$\n"
  REMOVE_RELIC_EFFECT:0 "Relic lost: $NAME|Y$\n"
@@ -163,7 +163,7 @@
  SHARED_SECTOR_STOCKPILE_AMOUNT:0 "$AMOUNT|*0$"
  MONTHLY_SHARED_SECTOR_STOCKPILE_AMOUNT:0 "$AMOUNT|*0$ (+$MONTHLY|*0$) £plus£"
  SHARED_SECTOR_STOCKPILE_DESC:0 "§Hคลังเก็บที่ใช้ร่วมกัน§!\nจำนวนทรัพยากรที่กักตุนไว้สำหรับการใช้งานร่วมกันระหว่างเซกเตอร์\nคลังเก็บที่ใช้ร่วมกันจะถูกใช้หลังจากที่มีเซกเตอร์ที่โฟกัสไปที่การก่อสร้างบนดาวเคราะห์"
- LOCAL_SECTOR_STOCKPILE_DESC:0 "§H$LOCAL_SECTOR_STOCKPILE$§!\nจำนวนทรัพยากรที่เก็บในเซกเตอร์นี้\nคลังของเซกเตอร์จะถูกใช้โดยเซกเตอร์นี้เท่านั้น เพื่อใช้ในการก่อสร้างบนดาวเคราะห์"
+ LOCAL_SECTOR_STOCKPILE_DESC:0 "§H$LOCAL_SECTOR_STOCKPILE$§!\nจำนวนทรัพยากรที่เก็บในเซกเตอร์นี้\nคลังของเซกเตอร์จะถูกใช้โดยเซกเตอร์นี้เท่านั้น เพื่อใช้ในการก่อสร้างบนดาวเคราะห์แต่ละดวงในเซกเตอร์"
  sector:0 "เซกเตอร์"
  SHARED_SECTOR_RESOURCES:0 "ทรัพยากรของเซกเตอร์"
  SHARED_SECTOR_MONTHLY:0 "รายเดือน"
@@ -172,8 +172,8 @@
  EMPIRE_RESOURCES_LABEL:0 "ทรัพยากรของจักรวรรดิ"
  SECTOR_RESOURCE_MONTHLY_TRANSFER:0 "Desired monthly transfer to shared resource stockpile"
  SECTOR_RESOURCE_TRANSFER_AMOUNT_LABEL:0 "+$AMOUNT|*0$"
- MESSAGE_ARCHAEOLOGY_SITE_FINISHED_TITLE:0 "Archaeological Site Finished"
- MESSAGE_ARCHAEOLOGY_SITE_FINISHED_DESC:0 "An archaeological site in our empire has been fully excavated"
+ MESSAGE_ARCHAEOLOGY_SITE_FINISHED_TITLE:0 "การขุดค้นโบราณสถานเสร็จแล้ว"
+ MESSAGE_ARCHAEOLOGY_SITE_FINISHED_DESC:0 "โบราณสถานในจักรวรรดิของเราถูกขุดค้นจนหมดแล้ว"
  MESSAGE_ARCHAEOLOGY_STAGE_FINISHED_TITLE:0 "Archaeological Site Progress"
  MESSAGE_ARCHAEOLOGY_STAGE_FINISHED_DESC:0 "We have unlocked the next stage of an archaeological site"
  MESSAGE_ARCHAEOLOGY_SITE_DISCOVERED_TITLE:0 "ค้นพบแหล่งโบราณคดี"
@@ -185,9 +185,9 @@
  EXCAVATION_PROGRESS_TOOLTIP:1 "§HExcavation Phase§!\nArchaeological sites are excavated in phases, at the end of each phase a progress roll is made.\n\nNext phase ends in £time£ $DAYS|Y$"
  LEADER_MODIFIERS:0 "§Hการปรับเปลี่ยนผู้นำ§!"
  ARCHAEOLOGICAL_SITE:0 "โบราณสถาน"
- ARCHAEOLOGICAL_SITE_IN_SYSTEM:0 "This system contains at least one archaeological site"
- STAGE_IN_PROGRESS:0 "Ongoing Excavation"
- STAGE_NOTHING_TO_REPORT:0 "Nothing to report"
+ ARCHAEOLOGICAL_SITE_IN_SYSTEM:0 "ระบบนี้มีแหล่งโบราณคดีอย่างน้อยหนึ่งแห่ง"
+ STAGE_IN_PROGRESS:0 "กำลังขุดค้นอย่างต่อเนื่อง"
+ STAGE_NOTHING_TO_REPORT:0 "ไม่มีรายงาน"
  STAGE_ZERO:0 "§HSite Summary§!"
  STAGE_HELP:0 "§GClick to view stage events and rewards§!"
  ARCHAEOLOGICAL_SITE_ASSIGN_SCIENTIST:0 "§Hกำหนดนักวิทยาศาสตร์เพื่อเริ่มการขุดค้น§!"
@@ -207,7 +207,7 @@
  ARC_EXPEDITION_LOG:0 "บันทึกการขุดค้น"
  ARC_EXPEDITION_LOG_TT:0 "§H$ARC_EXPEDITION_LOG$§!\nThe $ARC_EXPEDITION_LOG$ shows you the results of the last excavation phase."
  ARC_ABANDON:0 "ยกเลิกการขุดค้น"
- artifact_sell_collector:0 "Sell to Private Collectors"
+ artifact_sell_collector:0 "ขายให้นักสะสม"
  artifact_sell_collector_desc:0 "Put some of our minor artifacts up for auction to private collectors."
  artifact_sell_cooldown:0 "$artifact_sell_collector$ Cooldown"
  artifact_arcane_deciphering:0 "Reverse-Engineer Arcane Technology"
@@ -273,7 +273,7 @@
  artifact_precursor_insight_cooldown:0 "เวลาคูลดาวน์ $artifact_precursor_clue$"
  artifact_action_locked:0 "§L??????§!"
  artifact_action_locked_desc:0 "There must be something more we can do with our £minor_artifacts£Minor Artifacts."
- artifact_action_locked_failtext:0 "Unlocks a new minor artifact action.\n\n$TRIGGER_FAIL$§RRequires the £society£ §!§Y$tech_arcane_deciphering$§!§R technology.§!"
+ artifact_action_locked_failtext:0 "ปลดล็อกการดำเนินการใหม่ของศิลปวัตถุชั้นรอง\n\n$TRIGGER_FAIL$§Rต้องการ £society£ §! §Rเทคโนโลยี§! §Y$tech_arcane_deciphering$§!"
  artifact_find_peaceful_applications_locked:0 "$artifact_action_locked$"
  artifact_find_peaceful_applications_locked_desc:0 "$artifact_action_locked_desc$"
  artifact_find_military_applications_locked:0 "$artifact_action_locked$"
@@ -388,7 +388,7 @@
  ancrel.10350.desc:0 "We have successfully managed to integrate the Zroni artifacts into our research process. Their insights into psionic study will greatly aid our own."
  zroni_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_zroni_research$§!"
  ancient_battle_site:0 "$ancrel.108.name$"
- artifact_cultural_study:1 "Museum Exhibits §E(Planetary Decision)§!"
+ artifact_cultural_study:1 "ส่งไปแสดงที่พิพิธภัณฑ์ §E(การตัดสินใจของดาวเคราะห์)§!"
  artifact_cultural_study_desc:0 "The $decision_museum_exhibits$ decision increases the production of Culture Workers on one of our planets."
  artifact_cultural_study_effect:1 "$decision_museum_exhibits_desc$\n\n$artifact_action_planetary_decision$"
  artifact_action_planetary_decision:0 "This action must be performed as a §YDecision§! on a planet."
@@ -403,7 +403,7 @@
  decision_manager_awards_desc:0 "The Executives and Managers will compete to bring the most value to the corporation. The best performing will get to display these artifacts in their new larger offices."
  planet_manager_awards:0 "การแข่งขันด้านประสิทธิภาพ"
  planet_manager_awards_desc:0 "Executives and Managers on this planet are competing to maximize business synergies and exceed key performance indicator goals."
- artifact_sanctuary_exhibits:1 "Sanctuary Exhibits §E(Planetary Decision)§!"
+ artifact_sanctuary_exhibits:1 "นิทรรศการเขตรักษาพันธุ์ §E(การตัดสินใจของดาวเคราะห์)§!"
  artifact_sanctuary_exhibits_desc:0 "The $decision_sanctuary_exhibits$ decision entertains the Bio-Trophies on one of our planets."
  artifact_sanctuary_exhibits_effect:1 "$decision_sanctuary_exhibits_desc$\n\n$artifact_action_planetary_decision$"
  decision_sanctuary_exhibits:0 "ส่งศิลปวัตถุไปยังปูชนียสถานของสิ่งมีชีวิต"
@@ -413,13 +413,13 @@
  mod_planet_executives_produces_mult:0 "ผลผลิตของ £job_executive£ $job_executive_plural$"
  mod_planet_managers_produces_mult:0 "ผลผลิตของ £job_manager£ $job_manager_plural$"
  mod_planet_bio_trophies_produces_mult:0 "ผลผลิตของ £job_bio_trophy£ $job_bio_trophy_plural$"
- artifact_artifact_relays_hivemind:1 "Artifact Relays §E(Planetary Decision)§!"
+ artifact_artifact_relays_hivemind:1 "ถ่ายทอดศิลปวัตถุ §E(การตัดสินใจของดาวเคราะห์)§!"
  artifact_artifact_relays_hivemind_desc:0 "The $decision_artifact_relays_hivemind$ decision improves the communication abilities of our $job_synapse_drone_plural$ on one of our planets."
  artifact_artifact_relays_hivemind_effect:1 "$decision_artifact_relays_hivemind_desc$\n\n$artifact_action_planetary_decision$"
  decision_artifact_relays_hivemind:0 "ถ่ายทอดศิลปวัตถุรวมเข้าด้วยกัน"
  decision_artifact_relays_hivemind_desc:0 "By using minor artifacts to relay signals, our $job_synapse_drone_plural$ are able to enhance the efficiency of all of our $pop_cat_simple_drone_plural$."
  decision_artifact_relays_hivemind_effect:0 "£job_synapse_drone£ §Y$job_synapse_drone_plural$§! บนดาวแต่ละแห่งจะทำให้ผลผลิตของโดรนทาส §G+1%§! และเสถียรภาพ §G+2§!"
- planet_artifact_relays_hivemind:0 "Artifact Relays"
+ planet_artifact_relays_hivemind:0 "ถ่ายทอดศิลปวัตถุ"
  planet_artifact_relays_hivemind_desc:0 "Our $job_synapse_drone_plural$ are using minor artifacts to enhance our $pop_cat_simple_drone_plural$."
  artifact_artifact_relays_machine:0 "$artifact_artifact_relays_hivemind$"
  artifact_artifact_relays_machine_desc:0 "The $decision_artifact_relays_machine$ decision improves the communication abilities of our $job_coordinator_plural$ on one of our planets."
@@ -437,7 +437,7 @@
  relic_queen_spawn:1 "Breed a sizeable Prethoryn fleet"
  relic_rubricator_active:0 "Create §Y30§! £minor_artifacts£Minor Artifacts."
  relic_galaxy_active:0 "Gain §Y50%§! tech progress in a random technology."
- relic_zro_crystal_passive:1 "The cooldown to §YBreach into the Shroud§! is reduced by §G50%§!.\n\nGrants access to the §Y$edict_zro_crystal$§! edict increasing leader experience gain and longevity."
+ relic_zro_crystal_passive:2 "The cooldown to §YBreach into the Shroud§! is reduced by §G50%§!.\n\nGrants access to the §Y$edict_zro_crystal$§! edict, which increases leader experience gain and longevity.\n\nRuler Level Cap: §G+5§!"
  edict_zro_crystal:0 "Zro Addatives"
  edict_zro_crystal_desc:0 "The properties of Zro are mysterious. Yet if given to our leaders, it seems they obtain slight precognitive abilities, allowing them to learn faster and avoid dangers that could have ended their lives early."
  edict_zro_crystal_machine:0 "$edict_zro_crystal$"
@@ -534,15 +534,15 @@
  the_memorex:0 "The Memorex"
  the_memorex_desc:0 "The Memorex Enhanced Learning Program trains the population to better fit the needs of the empire, as they sleep, improving their output significantly."
  opinion_destroyed_caravaneer_home:0 "Destroyed the Caravaneer's home"
- leader_trait_traumatized:0 "Traumatized"
+ leader_trait_traumatized:0 "มีปัญหาทางจิต"
  leader_trait_traumatized_desc:0 "Recently sustained psychological trauma is interfering with this leader's performance."
- leader_trait_maimed:0 "Maimed"
+ leader_trait_maimed:0 "พิการ"
  leader_trait_maimed_desc:0 "This leader has sustained irreversible physical injury that has lowered their life expectancy significantly."
- leader_trait_inspired_archaeologist:0 "Inspired Archaeologist"
+ leader_trait_inspired_archaeologist:0 "นักโบราณคดีที่มีแรงบันดาลใจ"
  leader_trait_inspired_archaeologist_desc:0 "This leader has had a sudden stroke of inspiration."
- leader_trait_inspired_researcher:0 "Inspired Researcher"
+ leader_trait_inspired_researcher:0 "นักวิจัยที่มีแรงบันดาลใจ"
  leader_trait_inspired_researcher_desc:1 "$leader_trait_inspired_archaeologist_desc$"
- leader_trait_inspired_surveyor:0 "Inspired Surveyor"
+ leader_trait_inspired_surveyor:0 "นักสำรวจที่มีแรงบันดาลใจ"
  leader_trait_inspired_surveyor_desc:1 "$leader_trait_inspired_archaeologist_desc$"
  leader_trait_governor_oracle:0 "เทพยากรณ์"
  leader_trait_governor_oracle_desc:0 "The Oracle sees all."
