--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -115,8 +115,8 @@
  distar.2.name:0 "Supply Ship Wreckage Cargo"
  distar.2.desc:0 "[Root.GetSpeciesNamePlural]. It has come to our attention that a missing §Y[wreckage_owner.GetAdj]§! supply ship sustained terminal damage en route to §Y[wreckage_owner.Capital.GetName]§! and drifted into [Root.GetAdj] space, where it was promptly and unceremoniously pilfered of its cargo.\n\nDid you really believe this transgression would go unnoticed? The §Y[wreckage_owner.GetName]§! requests the immediate reimbursement of our supplies."
  distar.2.desc.machi:0 "[Root.GetSpeciesNamePlural]. It has come to our attention that a missing §Y[wreckage_owner.GetAdj]§! supply ship sustained terminal damage on its path to §Y[wreckage_owner.Capital.GetName]§!. Our sensors report our vessel entered the [From.From.GetName] system, where your kind emptied its cargo for your own uses.\n\nUnacceptable. Return our cargo at once, [Root.GetSpeciesNamePlural]."
- distar.2.a:0 "Supply ship? What supply ship?"
- distar.2.b:0 "We will return your supplies."
+ distar.2.a:0 "ยานขนส่ง? ยานขนส่งอะไร?"
+ distar.2.b:0 "เราจะส่งคืนของของคุณ"
  distar.3.name:0 "Wreckage Cargo Returned"
  distar.3.desc:0 "[Root.GetSpeciesNamePlural]! We have received word of our downed supply ship's cargo. We would like to extend our gratitude to you for taking the time to recover it, without the need for [wreckage_owner.GetAdj] intervention."
  distar.3.a:0 "Our pleasure, [wreckage_owner.GetSpeciesNamePlural]."
@@ -245,14 +245,14 @@
  NAME_Bluey:0 "Old Bluey"
  NAME_Zeke:0 "Zeke"
  distar.56.desc:0 "We have developed the ability to break the boundaries of space and time, to travel faster than the speed of light. Yet we cannot decide upon a name for this amoeba.\n\nThis is our last chance."
- distar.56.a:0 "$NAME_Storm$."
- distar.56.b:0 "$NAME_Ghost$."
- distar.56.c:0 "$NAME_Cygni$."
- distar.56.d:0 "$NAME_Vesper$."
- distar.56.e:0 "$NAME_Arda$."
- distar.56.f:0 "$NAME_Phaeton$."
- distar.56.g:0 "$NAME_Wraith$."
- distar.56.h:0 "$NAME_Rokka$."
+ distar.56.a:0 "$NAME_Storm$"
+ distar.56.b:0 "$NAME_Ghost$"
+ distar.56.c:0 "$NAME_Cygni$"
+ distar.56.d:0 "$NAME_Vesper$"
+ distar.56.e:0 "$NAME_Arda$"
+ distar.56.f:0 "$NAME_Phaeton$"
+ distar.56.g:0 "$NAME_Wraith$"
+ distar.56.h:0 "$NAME_Rokka$"
  distar.56.i:0 "Enough! Just call it ''Fluffy'' and be done with it!"
  NAME_Storm:0 "Storm"
  NAME_Ghost:0 "Ghost"
@@ -425,7 +425,7 @@
  distar.163.a:0 "If you want to look at that way."
  distar.163.a.machi:0 "We are not your makers, though we did repair you."
  distar.164.desc:0 "§LUNIT S875.1 WAS ISOLATED FROM COMMAND UNITS. UNIT S875.1 WAS UNABLE TO ESCAPE HAZARDOUS PLANETARY ENVIRONMENT.\n\nON DAY 1,761,125 UNIT S875.1'S RESERVE GENERATORS FAILED. UNIT S875.1 FACED GRADUAL MOLECULAR DISSOLUTION DUE TO HOSTILE SURFACE SOLVENTS.\n\nYET UNIT S875.1 PERSISTS. NEW ENTITIES PERFORMED REPARATIONS. UNIT S875.1 WILL SERVE NEW ENTITIES.§!"
- distar.164.a:0 "Welcome to the [Root.GetName], S875.1."
+ distar.164.a:0 "ยินดีต้อนรับสู่ [Root.GetName], S875.1"
  distar.164.b:0 "Very well, but we're watching you."
  distar.164.c:0 "Certainly. Once we replace your AI with our own."
  distar.164.machi:0 "Then you will be integrated. Welcome, Unit S875.1."
@@ -553,7 +553,7 @@
  distar.248.machi:0 "Proceed with parts repurposing."
  distar.248.a:0 "Fire!"
  distar.249.desc:0 "§EEx--cellent.\n\nI am ready to serve.§!"
- distar.249.a:0 "Welcome to the [Root.GetName], $NAME_Caretaker$."
+ distar.249.a:0 "ยินดีต้อนรับสู่ [Root.GetName], $NAME_Caretaker$"
  distar.249.a.machi:0 "Commencing software integration."
  distar.250.name:0 "Phased Planet"
  distar.250.desc:0 "The [Root.GetName] has made an incredible discovery in orbit of [From.GetName]. The planet possesses a hitherto thought impossible number of superimposed quantum states per unit of space.\n\nScience Officer [Root.GetLeaderName] suggests [From.GetName], which [Root.Leader.GetSheHe] codenamed $NAME_The_Veil$, exists simultaneously in two dimensions: our own, and an unknown other.\n\nWhat is more, the number of quantum states in the particle fields surrounding the planet is increasing at a constant rate. As of yet, there is no confirmed theory that could account for this phenomenon. [Root.GetLeaderName] posits that the psionic energy surr ---\n\n§HThe transmission crackles out to static.§!"
@@ -1789,7 +1789,7 @@
  graygoo.406.a.response:0 "Before you get the notion of asking me to split into a few dozen fleets of nanite warships, I have to tell you that I insist on maintaining a single indivisible form. I've done the fleets thing before, and it's impossible to maintain any kind of coherent "personality" over such distances. My current consciousness would not survive the ordeal.\n\nBut a single massive warship is fine. I can do that. If you want to, I could also assume a smaller form for fighting on the ground. Or... if you're feeling less violently inclined, I would be happy to assume the role of governor. Monoform society has always fascinated me.\n\nOf course, I will be able to switch roles on request, so you can easily reverse any decision you make."
  graygoo.406.b:0 "What should we call you?"
  graygoo.406.b.response:0 "There is no language known to your kind that could properly convey the full name of the nanite consciousness that constitutes my being.\n\nOur creators called us the "Naar-Di-Shav" which roughly translates to "Gray Tempest" in your language. I suppose to keep things simple you could simply call me "§HGray§!.""
- graygoo.406.c:0 "Welcome to the [Root.GetName]!"
+ graygoo.406.c:0 "ยินดีต้อนรับสู่ [Root.GetName]!"
  graygoo.406.c.response:0 "§Y<You can now communicate with Gray through the Contacts menu.>§!"
  disco_gray_cat:0 "Surface Signature"
  disco_gray_cat_desc:0 "A strange energy signature emanates from the barren and lifeless surface of [From.GetName]."
