--- a/mod/thmod/localisation/english/events_3_l_english.yml
+++ b/mod/thmod/localisation/english/events_3_l_english.yml
@@ -448,13 +448,13 @@
  colony.2012.desc:1 "Our attempts to change the minds of our people on [Root.GetName] have backfired horribly. By banding together over our subjugation attempts they have gained even more followers, making them stronger than ever."
  colony.2012.a.spirit.tooltip:1 "All Materialist Pops on [Root.GetName] gain the §R$opinion_disrespected$§! modifier with the following effects:\n£happiness£ Happiness §R-40%§!\n\n§Y$materialist_attraction$§! modifier added with the following effects:\nMaterialist Ethics Attraction §G+100%§! for 20 years."
  colony.2012.a.material.tooltip:2 "All Spiritualist Pops on [Root.GetName] gain the §R$opinion_disrespected$§! modifier with the following effects:\n£happiness£ Happiness §R-40%§!\n\n§Y$spiritualist_attraction$§! modifier added with the following effects:\nSpiritualist Ethics Attraction §G+100%§! for 20 years."
- colony.2015.name:0 "An Odd Factor"
+ colony.2015.name:0 "เหตุแปลกๆ"
  colony.2015.desc:0 "A group of investigators have found a hidden factory on [Root.GetName]. The building and its state of decay tells of an old civilization, one that excelled at constructing things that stood the test of time.\n\nOur population would easily be able to use the facility to add to the colony's production output."
  colony.2015.a.tooltip:0 "An §S£building£ Odd Factory§! appears on the surface of [Root.GetName]."
  colony.2016.desc:0 "The crew we assigned to work the odd factory on [Root.GetName] has disappeared! We could send a new workforce to take their place, or we could raze the facility to the ground, making sure that this will not happen again."
- colony.2016.a:0 "It still suits our needs."
- colony.2016.a.tooltip:1 "A £pop£ §YPop§! has gone missing on [Root.GetName]."
- colony.2016.b:0 "Demolish it."
+ colony.2016.a:0 "มันยังคงตรงกับความต้องการของเรา"
+ colony.2016.a.tooltip:1 "£pop£ §Yประชากร§! บน [Root.GetName] หายไป"
+ colony.2016.b:0 "รื้อถอนมัน"
  colony.2016.b.tooltip:0 "The §S£building£ Odd Factory§! is destroyed."
  colony.2017.desc:0 "A second group of individuals has gone missing after working at the odd factory! Fortunately one of the workers was able to leave a recording behind, revealing that there are traps capturing unsuspecting workers.\n\nThe traps have been disabled and we should be able to use the factory without further issues. However, the populace are none too happy about the potential death trap, no matter what we say."
  colony.2017.a:0 "The people will get used to it."
