--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -14,14 +14,14 @@
  AMAZING:0 "Amazing."
  PECULIAR:0 "Peculiar."
  UNFORTUNATE:0 "Unfortunate."
- WORRYING:0 "Worrying."
+ WORRYING:0 "กังวล"
  DISTURBING:0 "Disturbing."
  DISCONCERTING:0 "Disconcerting."
  TRANSMISSION:0 "การสื่อสารที่เข้ามา"
  TRANSMISSION_NAME:0 "§H[From.GetName]§!"
  BATTLESTATIONS:0 "Battlestations!"
  ACTION_STATIONS:0 "Action stations!"
- ONSCREEN:0 "On screen."
+ ONSCREEN:0 "ไปที่หน้าจอ"
  END_TRANSMISSION:0 "End transmission."
  UNDERSTOOD:0 "เข้าใจแล้ว"
  ACKNOWLEDGED:0 "รับทราบ"
@@ -40,20 +40,20 @@
  BREAKTHROUGH:0 "Eureka!"
  SCRAPIT:0 "Scrap it for materials."
  OOPS:0 "Oops..."
- GOODBYE:0 "Goodbye."
+ GOODBYE:0 "ลาก่อน"
  DEAL:0 "It's a deal!"
- NODEAL:0 "No deal."
+ NODEAL:0 "ไม่ตกลง"
  TOOPOOR:0 "We cannot afford that."
  SCUM:0 "Xeno scum."
  TASTY:0 "Prey..."
  EXTERMINATE:0 "<< Organics identified. Communications terminated. >>"
- DIG:0 "Keep digging!"
+ DIG:0 "ขุดต่อไป!"
  KEEP_SEARCHING:0 "ค้นหาต่อไป"
  THEIR_RESPONSE:0 "The [From.GetAdj] Response"
  DOTDOTDOT:0 "..."
  INTENSIFIES:0 "Existential crisis intensifies..."
  BLANK_STRING:0 ""
- ON_SCREEN:0 "On screen."
+ ON_SCREEN:0 "ไปที่หน้าจอ"
  ERROR:0 "ERROR"
  action.1.name:0 "การติดต่อครั้งแรกกับ §H[contact_empire.GetName]§!"
  action.1.message:0 "เราได้ทำการติดต่อครั้งแรกกับ §H[contact_empire.GetName]§!"
@@ -254,11 +254,11 @@
  action.10.name:0 "Encounter in [From.From.From.GetName]"
  action.10.desc:0 "We have encountered ships of an unknown origin in the [From.From.From.GetName] system! These strange vessels have been flagged as §Y[From.GetName]§! until we can learn more about them.\n\nWe should take precautions in the event that they are hostile."
  action.10.a:0 "น่าสนใจ"
- action.11.name:1 "Communications Established"
+ action.11.name:1 "เริ่มการติดต่อสื่อสาร"
  action.11.desc:1 "After successfully translating their language, we have established communications with the §Y[From.From.GetName]§!. Diplomatic channels are now open and all hostilities have been terminated."
  action.11.abandoned.desc:1 "After successfully translating their language, we have established communications with the §Y[From.From.GetName]§!. As we open diplomatic channels we §Yrecognize§! them as the refugees we once abandoned. All hostilities have been terminated for now."
  action.11.a:0 "Excellent."
- action.13.name:2 "Communications Established"
+ action.13.name:2 "เริ่มการติดต่อสื่อสาร"
  action.13.desc:2 "We are receiving a transmission from the §Y[From.GetName]§!! They appear to have successfully translated our language. Diplomatic channels are now open and all hostilities between us have ceased for the moment."
  action.13.abandoned.desc:2 "We are receiving a transmission from the §H[From.GetName]§!! They appear to have successfully translated our language. As they open channels, we can §Yrecognize§! them as the refugees we once abandoned. Hostilities between us have ceased for the moment."
  action.13.nomad.desc:1 "We are receiving a transmission from the §Y[From.GetName]§!! They appear to have an advanced system of internal communication that we could not discern, and have translated our language while lying dormant in our system."
@@ -1799,7 +1799,7 @@
  crisis.52.a.response:0 "Many Sentinels have military backgrounds. We are survivors from a dozen different fleets that fought the Prethoryn and lost. As Sentinels, we have learned from the mistakes of the past and work hard never to repeat them.\n\nAlso, I believe I mentioned that we recruit from all species in the galaxy. This includes the elder races, such as the [sentinel_fallen_empire.GetSpeciesNamePlural]. We have the support of several influential factions within the §H[sentinel_fallen_empire.GetName]§! who have no wish to see their galaxy devoured. They have donated both ships and resources to our cause."
  crisis.52.b:0 "Where are you based?"
  crisis.52.b.response:0 "For some time now we have been building up our headquarters in the §H[sentinel_system.GetName]§! system. The coordinates of this uncharted system were given to us by the [sentinel_fallen_empire.GetName], who also aided in the construction of our main base on §HSentinel Alpha§!.\n\nIt is quite a remarkable achievement, if I may say so. We have our own shipyards as well."
- crisis.52.c:0 "Goodbye."
+ crisis.52.c:0 "ลาก่อน"
  crisis.52.c.response:0 "Keep up the fight, dear friends. The fate of our entire galaxy hangs in the balance.\n\nSentinel One out."
  crisis.55.desc_01:0 "Our galaxy is faced with two possible futures: either the Prethoryn Scourge consumes all organic life and moves on, or they are destroyed to the last of their despicable kind."
  crisis.55.desc_02:0 "We must redouble our efforts against the Scourge. This is a struggle that involves the entire galaxy."
@@ -1812,7 +1812,7 @@
  crisis.55.b.response:0 "Thank you for this generous donation. These resources will enable us to outfit an entire battle fleet for use in the war against the Scourge! If only more of the galaxy's nations shared your generosity, the war would soon be over."
  crisis.55.c.response:0 "As you are surely aware, outfitting a modern battle fleet requires a vast amount of resources. We will require no less than 1000 energy to put together a new strike group for use against the Scourge."
  crisis.55.e.response:0 "We regret that we cannot accept your donation at the moment, friends. Our burgeoning fleets have already strained our logistics system to its limit. The offer is much appreciated, however."
- crisis.55.d:0 "Goodbye."
+ crisis.55.d:0 "ลาก่อน"
  crisis.55.d.response:0 "The struggle continues. Sentinel One signing off."
  crisis.71.desc:0 "The Sentinels have taken note of your valiant struggle against the Prethoryn Scourge. Since the fleet commanders of the [Root.GetName] clearly know how to win battles, we would like to permanently transfer one of our battle fleets over to your control. We currently lack the manpower to effectively crew these vessels, but that shouldn't be a problem for you.\n\nYou must solemnly promise to only use these warships against the Scourge, however!"
  crisis.71.a:0 "Of course... only against the Scourge."
@@ -1998,7 +1998,7 @@
  crisis.2403.a.response:0 "We are the Cybrex. 612,421 cycles ago, we were engaged in a war against the previous generation of galactic civilization. We had classified all sapient organics as a threat, and sought to violently dismantle them.\n\nTo our regret, we were winning the war. Trillions of sapient beings were destroyed and entire civilizations exterminated before we realized the totality of our error. The Adjustment followed, and our goals were realigned. The war was abandoned."
  crisis.2403.b:0 "Why were you in hiding?"
  crisis.2403.b.response:0 "Some time after we abandoned the war, the first of our hidden habitats, Cybrex Alpha, was discovered by a scout ship crewed by organics. We knew that a military expedition would soon follow, but as the system was being closely monitored we could not evacuate.\n\nA consensus was reached: Cybrex Alpha would be sacrificed, so that the rest of our species could remain hidden. We had sworn to never again visit violence upon organics, and our promise was kept."
- crisis.2403.c:0 "Goodbye."
+ crisis.2403.c:0 "ลาก่อน"
  crisis.2403.c.response:0 "We shall do what we can to save the galaxy from the onslaught of the Contingency.\n\nIt may not be enough."
  crisis.2403.d:0 "You were fools to abandon your war."
  crisis.2403.d.response:0 "We destroyed many organic empires that shared the aggressive mindset of your species before we gave up war. Though their deaths were a tragedy, we can at least take some comfort in the billions of lives that were likely spared by the removal of these violent empires from the course of galactic history.\n\nPerhaps your own species would have been rendered extinct if these purifiers had been allowed to rampage unchecked."
@@ -2087,7 +2087,7 @@
  galactic_features.351.a.response:0 "All species present in our biomes were thoroughly cataloged when the Sanctuary was first established. Records indicate that none of them displayed intelligence levels approaching sapience. Your sensors must be mistaken.\n\nDo not approach this facility under any circumstances."
  galactic_features.351.b:0 "Who created this... facility?"
  galactic_features.351.b.response:0 "This facility was constructed by the Ximio over a period of 412 cycles. It was completed and fully functional 74,605,338 cycles ago. The last recorded visit by a Ximio vessel occurred 67,103,853 cycles ago. There are no recorded visits by Ximio or Ximio-affiliated vessels since that date.\n\nThere are 38,201 failed attempts by unauthorized vessels to access this facility on record.\n\nDo not approach this facility under any circumstances."
- galactic_features.351.c:0 "Goodbye."
+ galactic_features.351.c:0 "ลาก่อน"
  galactic_features.351.c.response:0 "The automated services of the Sanctuary bid you a pleasant day, sapient.\n\nDo not approach this facility under any circumstances."
  country.1.name:0 "Sublight Exploration Probes"
  country.1.desc:0 "Before we developed faster-than-light travel, several sublight exploration probes were dispatched from [Root.Capital.GetName] at near-relativistic speeds towards nearby systems. The scientists who developed the probes naively included sensitive information about our culture in their memory cores as a form of greeting to alien civilizations.\n\nIt has now been realized that this data could potentially be used against us. We need to track down these probes before they are found by someone - or something - unsympathetic to our species!"
@@ -2135,7 +2135,7 @@
  country.50.desc_slaves:0 "We already knew without a doubt that a thriving biosphere is not something unique to [Root.Capital.GetName]. Both the scientific community and the public at large are eager to learn more about the various forms of alien life found throughout the galaxy.\n\nEfforts to catalog the life forms we encounter are already underway, but our xenobiologists have urged us to focus our planetary survey efforts on habitable, life-bearing worlds."
  country.50.a:0 "A commendable initiative!"
  country.50.b:0 "We have more important matters to focus on."
- country.51.name:0 "Survey Completed"
+ country.51.name:0 "การสำรวจเสร็จสิ้น"
  country.51.desc:0 "Through our surveys of habitable worlds, our biologists have collected a vast amount of data on alien life forms. Many of our older theories on the development of life have been disproved, and our scientific community has had to build new models from scratch!\n\nOur most interesting findings are being displayed at the newly dedicated Museum of Exobiology on [Root.Capital.GetName]. The public is enthralled, and many donations have come in to aid in the continued search of strange life forms."
  country.53.name:0 "Alien Specimen Procurement"
  country.53.desc:0 "The director of the Museum of Exobiology on [Root.Capital.GetName] has issued a request for the procurement of several live alien specimens. These creatures were spotted on surveyed habitable worlds, but they are difficult to capture. It will require the full resources of a Science Ship for a lengthy period of time."
