--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -88,9 +88,9 @@
  PLANET_RESOURCE_COMPARE_BALANCE:0 "Balance"
  ABORT_SPECIAL_PROJECT:0 "โครงการพิเศษ $PROJECT_NAME$ ถูกยกเลิก"
  COMPLETE_SPECIAL_PROJECT:0 "โครงการพิเศษ $PROJECT_NAME$ เสร็จสมบูรณ์"
- VOTING_TO_ENACT_COLON:0 "Voting to Enact: "
+ VOTING_TO_ENACT_COLON:0 "โหวตตรากฎหมาย: "
  VOTING_TO_ENACT_VALUE:1 "$VOTING_TO_ENACT_COLON$ $RESOLUTION|Y$"
- CURRNETLY_VOTING_TO_VALUE:0 "We are Voting: $VOTING|Y$"
+ CURRNETLY_VOTING_TO_VALUE:0 "เรากำลังโหวต: $VOTING|Y$"
  SORT_BY_DIPLOMATIC_STANCE:0 "§Hเรียงโดยท่าทีทางการทูต§!"
  SORT_BY_HOUSING:0 "เรียงโดยที่อยู่อาศัย"
  SORT_BY_DESIGNATION:0 "เรียงตามการกำหนดประเภทของอาณานิคม"
@@ -106,7 +106,7 @@
  PROPOSE_RESOLUTION_TITLE:0 "Propose Resolution"
  PROPOSE_RESOLUTION_CONFIRMATION_DESC:3 "It will cost our Empire $VALUE|0Y$ to propose this Resolution. Shall we add it to the Proposal Queue?"
  WARTARGET_ALLIES_DESC:0 "The Allies of your War Target will also be drawn into War against us."
- ORDER_OF_ROTATION:0 "Order of Rotation:"
+ ORDER_OF_ROTATION:0 "ลำดับการหมุนเวียน:"
  NEW_FEDERATION_PRESIDENT_CHOSEN_TITLE:0 "New Federation President"
  NEW_FEDERATION_PRESIDENT_CHOSEN:1 "The $PRESIDENT|H$ has been chosen as the new President of the $FEDERATION|H$."
  WITHDRAW_RESOLUTION_POPUP_TITLE:0 "Withdraw Resolution"
@@ -317,9 +317,9 @@
  federation_egalitarian_ideology:0 "$federation_militarist_ideology$"
  federation_egalitarian_ideology_desc:0 "Our membership in the federation is allowing egalitarianism to become increasingly widespread in our nation."
  resolution_category_space_fauna_tiyanki:1 "สัตว์อวกาศ"
- resolution_tiyanki_conservation_act:0 "กฎหมายการอนุรักษ์ Tiyanki"
+ resolution_tiyanki_conservation_act:0 "กฎหมายอนุรักษ์ Tiyanki"
  resolution_tiyanki_conservation_act_desc:0 "Tiyanki เป็นรูปแบบเฉพาะของชีวิตในอวกาศและต้องได้รับการปกป้องจากผู้ที่จะทำอันตราย"
- resolution_tiyanki_conservation_act_tooltip:0 "Any empire that kills a §YTiyanki§! will be considered in §RBreach of Galactic Law§!."
+ resolution_tiyanki_conservation_act_tooltip:0 "อาณาจักรใดๆที่สังหาร §YTiyanki§! จะได้รับการพิจารณาเรื่อง §Rการละเมิดกฎหมายกาแลกติก§!"
  resolution_repeal_tiyanki_conservation_act:0 "§Rยกเลิก $resolution_tiyanki_conservation_act$§!"
  resolution_repeal_tiyanki_conservation_act_desc:0 "It is not for the Galactic Community to decide how its members deal with the Tiyanki."
  resolution_repeal_tiyanki_conservation_act_effect_success:0 "ยกเลิก §Y$resolution_tiyanki_conservation_act$§!"
