--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -9,8 +9,8 @@
  station_l_plural:0 "Ancient Guardians"
  station_xl:0 "Ancient Vault"
  station_xl_plural:0 "Ancient Vaults"
- space_amoeba_mother:0 "Space Amoeba Mother"
- space_amoeba_mother_plural:0 "Space Amoeba Mothers"
+ space_amoeba_mother:0 "อะมีบาอวกาศตัวแม่"
+ space_amoeba_mother_plural:0 "อะมีบาอวกาศตัวแม่"
  ancient_mining_drone:0 "Ancient Mining Drone"
  ancient_mining_drone_plural:0 "Ancient Mining Drones"
  ancient_corvette:0 "Ancient Combat Drone"
@@ -39,10 +39,10 @@
  spectral_residue_studies:0 "Spectral Residue Studies"
  leviathans.5.name:1 "Leviathan Defeated"
  leviathans.5.desc:1 "§Y[leviathan_destroyer_country.GetName]§! has vanquished an ancient threat in the distant [leviathan_destroyed_system.GetName] system."
- leviathans.98.name:0 "Communications Established"
+ leviathans.98.name:0 "เริ่มการติดต่อสื่อสาร"
  leviathans.98.desc:1 "We are receiving a transmission from the independent space station of the §Y[From.GetName]§!! They appear to have successfully translated our language."
  leviathans.98.a:0 "น่าสนใจ"
- leviathans.99.name:0 "Communications Established"
+ leviathans.99.name:0 "เริ่มการติดต่อสื่อสาร"
  leviathans.99.desc:1 "After successfully translating their language, we have established communications with the independent space station of the §Y[From.From.GetName]§!."
  curator_government:0 "Curator Enclave"
  curator_government_desc:0 "§LAn ancient scholarly order dedicated towards the preservation of knowledge and technology.§!"
@@ -55,9 +55,9 @@
  RT_HIGH_ARTIST:0 "Headmaster"
  opinion-3:0 "ทัศนคติ: £opinion£ §R-3§!"
  opinion-5:0 "ทัศนคติ: £opinion£ §R-5§!"
- opinion_enclave_trade_deal_1:0 "$OPINION$: £opinion£ §G+$@traderOpinion1$§! each year"
- opinion_enclave_trade_deal_2:0 "$OPINION$: £opinion£ §G+$@traderOpinion2$§! each year"
- opinion_enclave_trade_deal_3:0 "$OPINION$: £opinion£ §G+$@traderOpinion3$§! each year"
+ opinion_enclave_trade_deal_1:0 "$OPINION$: £opinion£ §G+$@traderOpinion1$§! ต่อปี"
+ opinion_enclave_trade_deal_2:0 "$OPINION$: £opinion£ §G+$@traderOpinion2$§! ต่อปี"
+ opinion_enclave_trade_deal_3:0 "$OPINION$: £opinion£ §G+$@traderOpinion3$§! ต่อปี"
  opinion1:0 "$OPINION$: £opinion£ §G+1§!"
  opinion2:0 "$OPINION$: £opinion£ §G+2§!"
  opinion3:0 "$OPINION$: £opinion£ §G+3§!"
@@ -96,20 +96,20 @@
  leviathans.104d.desc:1 "A Muutagan and a Rixidaran walk into a bar... Never mind, this does not make for appropriate conversation. I beg your forgiveness."
  leviathans.104e.desc:0 "Greetings, [Root.GetSpeciesName]. You are here to trade with us, yes?"
  leviathans.104f.desc:0 "The word "discount" is considered a profanity among my people. Please keep this in mind when engaging in conversation with us."
- leviathans.105.c:1 "We are interested in §YStrategic Resources§!."
- trader_tt_strategicresource:0 "Purchase monthly shipments of §Ystrategic resources§!."
+ leviathans.105.c:1 "เรามีความสนใจใน §Yทรัพยากรเชิงยุทธศาสตร์§!"
+ trader_tt_strategicresource:0 "ซื้อ §Yทรัพยากรเชิงยุทธศาสตร์§! รายเดือน"
  leviathans.105.c.sr1:0 "We already have a §YRiggan Trade Deal§!\n"
  leviathans.105.c.sr2:0 "We already have a §YXuraCorp Trade Deal§!\n"
  leviathans.105.c.sr3:0 "We already have a §YMuutagan Trade Deal§!\n"
  leviathans.105.c.trust:0 "Requires this §YTrader Enclave§! to have:\n£opinion£ Opinion +50\n"
  leviathans.105.d:0 "ไม่มีอะไรในตอนนี้ ลาก่อน"
- leviathans.105.z:1 "We wish to hire a §Yconsultant§!."
+ leviathans.105.z:1 "เราต้องการจ้าง §Yที่ปรึกษา§!"
  trader_tt_governor:0 "Hire a [fromfrom.GetAdj] §YGovernor§! to run one of our Sectors."
  leviathans.110.a.reply:0 "Thank you for your business. Please come again!"
  leviathans.110.b.reply:0 "An excellent choice. You will not be disappointed by the quality of our minerals."
  leviathans.110.c.reply:0 "Big spender, eh? Looks like we can close early today!"
- leviathans.110.d:0 "We were interested in something else..."
- leviathans.110.e:0 "No deal."
+ leviathans.110.d:0 "เราสนใจอย่างอื่น..."
+ leviathans.110.e:0 "ไม่ตกลง"
  leviathans.120.a.reply:0 "Here are your credits. We have already arranged for the transfer of the minerals."
  leviathans.120.b.reply:0 "Excellent. Let us know if you want to offload more minerals in the future."
  leviathans.120.c.reply:0 "If only all of our customers traded with us in such bulk! Transferring credits to you now."
@@ -129,21 +129,21 @@
  leviathans.130.a.reply:1 "That's the XuraCorp way! Our freighters will begin making deliveries immediately.\n\n§LBy purchasing this product, you agree that XuraCorp cannot be held responsible for any adverse effects that may result from its use, including but not limited to: skin irritation, psychotic episodes, ocular discoloration, aggressive mutation, increased colonist suicide rates, precognitive trances, biosphere depletion, dangerous strangelet production, micro black hole generation, grain elevator explosions, societal collapse, mass extinction events, unexpected supernova detonations, the complete or partial destruction of your star nation, sudden gamma-ray bursts, time travel paradoxes, vacuum metastability events, universal entropy, the collapse of the space-time continuum...§!"
  leviathans.132.desc:2 "Shi'rakkat-Du - or §YRare Crystals§! as they are known to those who are not of our species - have come to symbolize our entire civilization. When these "singing" crystals vibrate, they emit a unique musical tone that has a calming effect on most sapients.\n\nAlthough we typically do not share the wonders of the Shi'rakkat-Du with outsiders, we are willing to make an exception in your case. If you can afford it, we are willing to export our crystals to you for a period of ten years."
  leviathans.132.a.reply:1 "Excellent. Our merchants will begin shipping the crystals to your planets at once. May the Shi'rakkat-Du sing to you."
- leviathans.131.a:4 "§G1§! £volatile_motes£ §H$volatile_motes$§!/month for §R10§! £energy£ §H$energy$§!/month."
- leviathans.131.b:1 "§G2§! £volatile_motes£ §H$volatile_motes$§!/month for §R20§! £energy£ §H$energy$§!/month."
- leviathans.131.c:1 "§G3§! £volatile_motes£ §H$volatile_motes$§!/month for §R30§! £energy£ §H$energy$§!/month."
- leviathans.131.d:1 "§G4§! £volatile_motes£ §H$volatile_motes$§!/month for §R40§! £energy£ §H$energy$§!/month."
- leviathans.131.e:1 "§G5§! £volatile_motes£ §H$volatile_motes$§!/month for §R50§! £energy£ §H$energy$§!/month."
- leviathans.130.a:4 "§G1§! £exotic_gases£ §H$exotic_gases$§!/month for §R10§! £energy£ §H$energy$§!/month."
- leviathans.130.b:1 "§G2§! £exotic_gases£ §H$exotic_gases$§!/month for §R20§! £energy£ §H$energy$§!/month."
- leviathans.130.c:1 "§G3§! £exotic_gases£ §H$exotic_gases$§!/month for §R30§! £energy£ §H$energy$§!/month."
- leviathans.130.d:1 "§G4§! £exotic_gases£ §H$exotic_gases$§!/month for §R40§! £energy£ §H$energy$§!/month."
- leviathans.130.e:1 "§G5§! £exotic_gases£ §H$exotic_gases$§!/month for §R50§! £energy£ §H$energy$§!/month."
- leviathans.132.a:3 "§G1§! £rare_crystals£ §H$rare_crystals$§!/month for §R10§! £energy£ §H$energy$§!/month."
- leviathans.132.b:0 "§G2§! £rare_crystals£ §H$rare_crystals$§!/month for §R20§! £energy£ §H$energy$§!/month."
- leviathans.132.c:0 "§G3§! £rare_crystals£ §H$rare_crystals$§!/month for §R30§! £energy£ §H$energy$§!/month."
- leviathans.132.d:0 "§G4§! £rare_crystals£ §H$rare_crystals$§!/month for §R40§! £energy£ §H$energy$§!/month."
- leviathans.132.e:0 "§G5§! £rare_crystals£ §H$rare_crystals$§!/month for §R50§! £energy£ §H$energy$§!/month."
+ leviathans.131.a:4 "§G1§! £volatile_motes£ §H$volatile_motes$§!/เดือน จ่าย §R10§! £energy£ §H$energy$§!/เดือน"
+ leviathans.131.b:1 "§G2§! £volatile_motes£ §H$volatile_motes$§!/เดือน จ่าย §R20§! £energy£ §H$energy$§!/เดือน"
+ leviathans.131.c:1 "§G3§! £volatile_motes£ §H$volatile_motes$§!/เดือน จ่าย §R30§! £energy£ §H$energy$§!/เดือน"
+ leviathans.131.d:1 "§G4§! £volatile_motes£ §H$volatile_motes$§!/เดือน จ่าย §R40§! £energy£ §H$energy$§!/เดือน"
+ leviathans.131.e:1 "§G5§! £volatile_motes£ §H$volatile_motes$§!/เดือน จ่าย §R50§! £energy£ §H$energy$§!/เดือน"
+ leviathans.130.a:4 "§G1§! £exotic_gases£ §H$exotic_gases$§!/เดือน จ่าย §R10§! £energy£ §H$energy$§!/เดือน"
+ leviathans.130.b:1 "§G2§! £exotic_gases£ §H$exotic_gases$§!/เดือน จ่าย §R20§! £energy£ §H$energy$§!/เดือน"
+ leviathans.130.c:1 "§G3§! £exotic_gases£ §H$exotic_gases$§!/เดือน จ่าย §R30§! £energy£ §H$energy$§!/เดือน"
+ leviathans.130.d:1 "§G4§! £exotic_gases£ §H$exotic_gases$§!/เดือน จ่าย §R40§! £energy£ §H$energy$§!/เดือน"
+ leviathans.130.e:1 "§G5§! £exotic_gases£ §H$exotic_gases$§!/เดือน จ่าย §R50§! £energy£ §H$energy$§!/เดือน"
+ leviathans.132.a:3 "§G1§! £rare_crystals£ §H$rare_crystals$§!/เดือน จ่าย §R10§! £energy£ §H$energy$§!/เดือน"
+ leviathans.132.b:0 "§G2§! £rare_crystals£ §H$rare_crystals$§!/เดือน จ่าย §R20§! £energy£ §H$energy$§!/เดือน"
+ leviathans.132.c:0 "§G3§! £rare_crystals£ §H$rare_crystals$§!/เดือน จ่าย §R30§! £energy£ §H$energy$§!/เดือน"
+ leviathans.132.d:0 "§G4§! £rare_crystals£ §H$rare_crystals$§!/เดือน จ่าย §R40§! £energy£ §H$energy$§!/เดือน"
+ leviathans.132.e:0 "§G5§! £rare_crystals£ §H$rare_crystals$§!/เดือน จ่าย §R50§! £energy£ §H$energy$§!/เดือน"
  leviathans.141:0 "[From.GetName] Destroyed"
  leviathans.141.desc:1 "Our fleet assets have destroyed the [From.GetName] headquarters. Efforts are well under way to recover as many valuables as possible from the shattered remnants of their starbase. We have gained a large amount of resources."
  leviathans.142.a.desc:0 "$leviathans.142.desc.first$ $leviathans.142.desc.known$ $leviathans.142.desc.second$"
@@ -281,7 +281,7 @@
  leviathans.353.desc:0 "We received a distress signal from the headmaster of the Artisan Troupe. Their last station and cultural haven has been destroyed. There were few survivors, and the troupe is essentially no more."
  leviathans.354.desc:0 "After having destroyed the Artisan Troupe's station we found many resources to salvage from the wreckage. Donations, gifts and creations stacked in its halls now drift in space, ready for the taking."
  leviathans.354.desc.unknown:1 "After destroying the station facility floating in the [station_system.GetName] system, we have found plenty of valuable resources amongst its remains."
- leviathans.500.name:0 "Curators"
+ leviathans.500.name:0 "ผู้ดูแลพิพิธภัณฑ์"
  leviathans.500a.desc:0 "Perhaps you are wondering about the significance of the shapes you see on the mural behind me. That is a good question with a very interesting answer! The fee for this information is 15 quadrillion energy credits."
  leviathans.500b.desc:0 "You have reached the Curators. How may we assist you?"
  leviathans.500c.desc:0 "Did you know that this conversation is being closely monitored by entities from seven different subspace realms? Alas, I fear that the technology to communicate with them is too far beyond the present capabilities of your civilization to do you any good."
@@ -297,24 +297,24 @@
  leviathans.502.name:1 "First Contact with the [curator_enclave_country.GetName]"
  leviathans.502a.desc:0 "Greetings, star travelers. We are the Curators.\n\nOur ancient order was established eons ago by the various galactic powers in ascendancy at the time. We were dedicated towards the preservation of all knowledge, in an effort to safeguard the galaxy from descending into yet another dark age of mass extinctions and barbarism.\n\nWe failed.\n\nFew of us remain today, but we are no less committed to our sacred mission than our predecessors were. We are willing to share some of our knowledge with you... for a price."
  leviathans.502b.desc:1 "Well met, explorers. You are speaking to the [curator_enclave_country.GetName]. Perhaps you are already familiar with the tenets of our ancient order. Like our esteemed colleagues in the other Curator enclaves, we are willing to trade provided that you can meet our rates."
- leviathans.502.a:0 "Well met."
- leviathans.500.a:1 "We are interested in procuring §Ynew star charts§!."
- leviathans.500.b:1 "Can you aid us in our §Yresearch§!?"
+ leviathans.502.a:0 "ยินดีที่พบ"
+ leviathans.500.a:1 "เรามีความสนใจในการหาแผนที่§Yดาวดวงใหม่§!"
+ leviathans.500.b:1 "คุณสามารถช่วยใน§Yการวิจัย§!ของเราได้หรือไม่?"
  leviathans.500.b.alreadyaided:0 "The Curators are already improving our research capabilities."
- leviathans.500.c:1 "Tell us about the §Ymysteries§! of the universe."
- leviathans.500.d:1 "Could we recruit one of your §Yscientists§!?"
+ leviathans.500.c:1 "บอกเราเกี่ยวกับ§Yความลึกลับ§!ของจักรวาล"
+ leviathans.500.d:1 "เราสามารถรับจ้าง§Yนักวิทยาศาสตร์§!ของคุณได้ไหม?"
  leviathans.500.d.alreadyrecruited:0 "We already employ a Curator scientist."
- leviathans.500.d.opinion:0 "Requires the §YCurators§! to have:\n£opinion£ Opinion +50"
- leviathans.500.h:1 "Can you tell us about your §Yother customers§!?"
- leviathans.500.i:0 "What do you know about the §Y$lgates$§!?"
+ leviathans.500.d.opinion:0 "ต้องการ §Yผู้ดูแลพิพิธภัณฑ์§! ให้มี:\n£opinion£ ทัศนคติ +50"
+ leviathans.500.h:1 "คุณช่วยบอกเราเกี่ยวกับ §Yลูกค้าคนอื่นๆของคุณ§!?"
+ leviathans.500.i:0 "คุณรู้อะไรเกี่ยวกับ §Y$lgates$§!?"
  leviathans.500.i.tooltip.noclue:2 "It takes the [curator_enclave_country.GetName] approximately a decade to identify each new §Y$clue$§!."
  leviathans.504a.desc:0 "Our order thanks you, esteemed customer."
  leviathans.504b.desc:0 "Thank you, [root.GetSpeciesAdj]. Clarity and curiosity be with you."
  leviathans.504c.desc:0 "A pleasure doing business with you. How else might our keen insights and inestimable records be of service to you?"
- leviathans.506.d:0 "What else did you have to offer?"
+ leviathans.506.d:0 "มีอะไรให้คุณอีกบ้าง?"
  leviathans.507.name:0 "Research Aid"
  leviathans.507.desc:1 "Of course. We are prepared to offer you limited access to our extensive databanks for a period of ten standard years. This should provide a significant boost to the research efforts of your planetside §HResearch Labs§!.\n\nWe will require compensation for this service, naturally, but I think you'll find that our prices are very reasonable."
- leviathans.507.a:0 "We would like to purchase this service."
+ leviathans.507.a:0 "เราต้องการซื้อบริการนี้"
  leviathans.507.a.reply:0 "A wise choice, that future generations of [Root.GetSpeciesNamePlural] will no doubt laud you for."
  leviathans.508.name:0 "Mysteries"
  leviathans.508.desc:0 "There are exceedingly powerful entities lurking within certain star systems in our galaxy. At great cost in both lives and resources, Curator agents have painstakingly gathered knowledge that should make these beings easier to deal with the next time you encounter them."
@@ -337,7 +337,7 @@
  leviathans.5106.f2.reply:0 "I would strongly advise against it. Your attacks would likely be more of an annoyance than a threat."
  leviathans.5106.f3.reply:1 "Hmmm, yes... Yes, I suppose you might actually stand a chance. If you combined your entire fleet... It would not be an easy victory, mind you, but one that is at least within the realm of possibility."
  leviathans.5106.f4.reply:0 "Yours is a mighty fleet, comparable to some of the greatest armadas recorded in the annals of the Curator Order. Victory is certainly within your reach."
- leviathans.500.f:1 "We would like to establish a mutual §YThink Tank§!."
+ leviathans.500.f:1 "เราต้องการสร้าง §YThink Tank§! ร่วมกัน"
  leviathans.511.name:0 "Think Tank"
  leviathans.511.desc:1 "Yes... yes, such a facility would benefit the advancement of Galactic Science. You may build this Think Tank at your starbase in the system you share with us. Our Curators will come to mingle with your scientists."
  leviathans.511.a:0 "Excellent. What else do you have to offer?"
