--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -4,7 +4,7 @@
  MESSAGE_BUILDING_CONSTRUCTION_MESSAGE_TYPE_TITLE:2 "การก่อสร้างเสร็จสมบูรณ์"
  MESSAGE_CONSTRUCTION_FINISH:0 "Planet $PLANET|Y$ has finished its construction queue."
  MESSAGE_CONSTRUCTION_FINISH_SPACEPORT:0 "The Spaceport of $PLANET|Y$ has finished its construction queue."
- MESSAGE_CONSTRUCTION_FINISH_STARBASE:0 "The $SYSTEM|Y$ Starbase has finished its construction queue."
+ MESSAGE_CONSTRUCTION_FINISH_STARBASE:0 "ฐานอวกาศ $SYSTEM|Y$ ได้เสร็จสิ้นการก่อสร้างแล้ว"
  MESSAGE_ORDER_FINISH_COLONIZE_PLANET:0 "เราได้ตั้งอาณานิคม $COLONY|Y$ ในระบบดาว $SYSTEM|Y$ แล้ว"
  MESSAGE_SPACEPORT_CONSTRUCTION_MESSAGE_TYPE_TITLE:0 "การก่อสร้างเสร็จสมบูรณ์"
  MESSAGE_STARBASE_CONSTRUCTION_MESSAGE_TYPE_TITLE:0 "การก่อสร้างเสร็จสมบูรณ์"
@@ -21,11 +21,11 @@
  MESSAGE_FLEET_ORDER_FINISH_MESSAGE_TYPE_TITLE:0 "Fleet Order Finished"
  MESSAGE_SYSTEM_SURVEYED_TITLE:0 "สำรวจระบบโดยละเอียดแล้ว"
  AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE:0 "คำสั่งของยานถูกยกเลิก"
- MESSAGE_FLEET_ORDER_AUTO_EXPLORE_CANCELED:1 "§H$FLEET$§! canceled its Auto Surveying order. It cannot reach or find any other unsurveyed systems."
- AUTO_EXPLORE_FALLBACK_MESSAGE_TYPE_TITLE:0 "Fleet Falling Back To Exploration"
- MESSAGE_FLEET_ORDER_AUTO_EXPLORE_FALLBACK:0 "§H$FLEET$§! cannot reach any unsurveyed systems but will try to explore to find additional ones."
+ MESSAGE_FLEET_ORDER_AUTO_EXPLORE_CANCELED:1 "§H$FLEET$§! ยกเลิกคำสั่งสำรวจอัตโนมัติ ไม่สามารถเข้าถึงหรือค้นหาระบบอื่นที่ไม่ได้สำรวจได้"
+ AUTO_EXPLORE_FALLBACK_MESSAGE_TYPE_TITLE:0 "ยานถอยกลับไปสำรวจที่ใหม่"
+ MESSAGE_FLEET_ORDER_AUTO_EXPLORE_FALLBACK:0 "§H$FLEET$§! ไม่สามารถเข้าถึงระบบดาวใดๆ ที่ยังไม่ได้สำรวจได้ แต่จะพยายามสำรวจค้นหาระบบเพิ่มเติม"
  FLEET_BUILD_ORDER_CANCELED_MESSAGE_TYPE_TITLE:0 "$AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE$"
- MESSAGE_FLEET_BUILD_ORDER_CANCELED_MESSAGE:0 "$FLEET|H$ was unable to build a $STATION|H$ in $SYSTEM|H$. Resources have been refunded."
+ MESSAGE_FLEET_BUILD_ORDER_CANCELED_MESSAGE:0 "$FLEET|H$ ไม่สามารถสร้าง $STATION|H$ ในระบบดาว $SYSTEM|H$ ได้, รับทรัพยากรคืนแล้ว"
  MESSAGE_BYPASS_EXPLORED:0 "Wormhole Explored"
  BYPASS_EXPLORED_MESSAGE:0 "The Wormhole in $SYSTEM1|Y$ has been explored. It connects to the $SYSTEM2|Y$ system."
  MESSAGE_ESN_ARRIVED_TITLE:0 "นำทางด้วยการทดลองมิติย่อย"
@@ -284,7 +284,7 @@
  COUNTRY_LEADER_DEATH:0 "$CLASS|Y$, $LEADER|Y$ ของเราตาย!"
  HEIR_DEATH:0 "§Y$HEIR$§!, $HEIRNAME|Y$ ของเราตาย!"
  RULER_ELECTED:0 "เลือกผู้ปกครองคนใหม่แล้ว! $TITLE$ $LEADER|Y$ จะปกครองไปจนถึงการเลือกตั้งครั้งต่อไป ซึ่งจะเกิดขึ้นใน $TIME|Y$"
- RULER_ELECTED_UNTIL_DEATH:1 "$TITLE$ $LEADER|Y$ has been chosen as the new Ruler, and will reign until their death."
+ RULER_ELECTED_UNTIL_DEATH:1 "$TITLE$ $LEADER|Y$ ได้รับเลือกให้เป็นผู้ปกครองคนใหม่ และจะครองตำแหน่งไปจนตาย"
  RULER_ELECTED_HEIR:1 "As per the order of succession, $TITLE$ $LEADER|Y$ is the new Ruler."
  MESSAGE_LEADER_DEATH_TITLE:0 "ผู้นำเสียชีวิต"
  MESSAGE_RULER_ELECTED_TITLE:0 "ผู้ปกครองได้รับเลือก"
@@ -292,7 +292,7 @@
  MESSAGE_RULER_ELECTED_HEIR_TITLE:0 "ครองราชย์สำเร็จ"
  MESSAGE_ELECTION_MESSAGE_TYPE_TITLE:0 "การเลือกตั้ง"
  MESSAGE_DEMOCRATIC_ELECTION_DESC:0 "การรณรงค์เพื่อเลือกตั้ง$TITLE$คนใหม่กำลังดำเนินอยู่\nประกาศผลในวันที่ $DATE|Y$"
- MESSAGE_OLIGARCHIC_ELECTION_DESC:0 "The negotiations for appointing a new $TITLE$ are under way.\nThe decision will be announced on $DATE|Y$."
+ MESSAGE_OLIGARCHIC_ELECTION_DESC:0 "การเจรจาเพื่อแต่งตั้ง$TITLE$ใหม่กำลังดำเนินอยู่\nการตัดสินใจจะประกาศในวันที่ $DATE|Y$"
  ELECTION_CLICK_FOR_MORE_INFO:0 "คลิกเพื่อดูข้อมูลเพิ่มเติม"
  LEADER_DEATH_AGE:0 "$CLASS|Y$ $LEADER|Y$ เสียชีวิตเมื่ออายุได้ $AGE|Y$ ปี"
  TOOLTIP_KILL_LEADER:0 "$CLASS|Y$ $LEADER|Y$ §Rตาย§!"
@@ -374,7 +374,7 @@
  TRIGG_MOD_LOST:1 "The Conditional Effect '$NAME|H$' is no longer active."
  MESSAGE_TRIGG_MOD_GAINED_TITLE:0 "Conditional Effect Gained"
  TRIGG_MOD_GAINED:1 "$NAME|H$\n\n$DESC$"
- MESSAGE_COMBAT_STATS_TITLE:0 "Fleet Combat Stats"
+ MESSAGE_COMBAT_STATS_TITLE:0 "ข้อมูลการสู้รบกองยาน"
  MESSAGE_INVALIDATED_EDICT_TITLE:0 "ประกาศคำสั่งถูกยกเลิก"
  COUNTRY_EDICT_BECAME_INVALID:1 "The $EDICT|Y$ Edict was invalidated since it no longer fulfills the required conditions."
  MESSAGE_EXPIRED_EDICT_TITLE:0 "ประกาศคำสั่งหมดอายุ"
