--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -84,7 +84,7 @@
  MOD_COUNTRY_SUBJECT_INTEGRATION_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการรวมเข้ากับบริวาร"
  MOD_COUNTRY_SUBJECT_INFLUENCE_GAIN_MULT:0 "อิทธิพลจากบริวาร"
  MOD_COUNTRY_SUBJECT_ACCEPTANCE_ADD:0 "Subjugation Acceptance"
- MOD_MONTHLY_LOYALTY_GAIN:0 "Monthly Loyalty Change"
+ MOD_MONTHLY_LOYALTY_GAIN:0 "การเปลี่ยนแปลงความภักดีรายเดือน"
  MOD_COUNTRY_FACTION_INFLUENCE_MULT:0 "ได้รับอิทธิพลจากกลุ่มการเมือง"
  MOD_COUNTRY_FACTION_INFLUENCE_ADD:0 "อิทธิพลสูงสุดที่ได้จากกลุ่มการเมือง"
  MOD_COUNTRY_CLEAR_BLOCKER_COST_MULT:0 "ค่าใช้จ่ายในการเคลียร์สิ่งกีดขวาง"
@@ -150,7 +150,7 @@
  mod_job_soldier_stability_add:0 "เสถียรภาพจากงาน £job_soldier£ [GetSoldier]"
  MOD_COUNTRY_COLONY_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในอาณานิคม"
  MOD_COUNTRY_CLAIM_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการอ้างสิทธิ์"
- MOD_COUNTRY_HOSTILE_CLAIM_INFLUENCE_COST_MULT:0 "Hostile Claim Influence Cost"
+ MOD_COUNTRY_HOSTILE_CLAIM_INFLUENCE_COST_MULT:0 "อิทธิพลที่ศัตรูใช้ในการอ้างสิทธิ์"
  MOD_COUNTRY_FACTION_SURPRESSION_COST_MULT:0 "ค่าใช้จ่ายในการปราบปรามกลุ่มการเมือง"
  MOD_COUNTRY_POLICY_HAPPINESS_MULT:0 "ผลกระทบความสุขจากนโยบาย"
  MOD_POP_ETHICS_SHIFT_SPEED:0 "โอกาสเปลี่ยนแปลงจริยธรรม"
@@ -428,9 +428,9 @@
  mod_planet_buildings_strongholds_upkeep_mult:0 "ค่าบำรุงรักษาป้อมปราการ"
  mod_planet_district_arcology_industrial_speed_mult:0 "Industrial Arcology Build Speed"
  mod_planet_district_industrial_build_speed_mult:0 "Industrial District Build Speed"
- mod_planet_district_hab_industrial_build_speed_mult:0 "Habitat Industrial District Build Speed"
+ mod_planet_district_hab_industrial_build_speed_mult:0 "ความเร็วในการสร้างเขตอุตสาหกรรมบนที่อยู่อาศัยในอวกาศ"
  mod_planet_districts_industrial_cost_mult:0 "Industrial District Cost"
- mod_planet_districts_hab_industrial_cost_mult:0 "Habitat Industrial District Cost"
+ mod_planet_districts_hab_industrial_cost_mult:0 "ราคาค่าเขตอุตสาหกรรมบนที่อยู่อาศัยในอวกาศ"
  mod_planet_district_arcology_civilian_industry_build_speed_mult:1 "ความเร็วในการสร้าง $district_arcology_civilian_industry$"
  mod_planet_district_arcology_arms_industry_build_speed_mult:1 "ความเร็วในการสร้าง $district_arcology_arms_industry$"
  mod_planet_district_hab_energy_build_speed_mult:0 "ความเร็วในการสร้าง $district_hab_energy$"
@@ -755,7 +755,7 @@
  mod_category_field_manipulation_research_speed_mult:0 "ความเร็วในการวิจัย (การควบคุมสนามพลัง)"
  mod_category_particles_research_speed_mult:0 "ความเร็วในการวิจัย (อนุภาค)"
  mod_category_computing_research_speed_mult:0 "ความเร็วในการวิจัย (การคำนวณ)"
- mod_category_metaphysics_research_speed_mult:0 "ความเร็วในการวิจัย (Metaphysics)"
+ mod_category_metaphysics_research_speed_mult:0 "ความเร็วในการวิจัย (อภิปรัชญา)"
  mod_category_statecraft_research_speed_mult:0 "ความเร็วในการวิจัย (การปกครอง)"
  mod_category_genetics_research_speed_mult:0 "ความเร็วในการวิจัย (พันธุศาสตร์)"
  mod_category_military_theory_research_speed_mult:0 "ความเร็วในการวิจัย (ทฤษฎีทางทหาร)"
@@ -1400,7 +1400,7 @@
  mod_ART_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งงมีชีวิตขาปล้อง"
  mod_MOL_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนทาก"
  mod_FUN_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนเห็ดรา"
- mod_PLANT_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภท Plantoid"
+ mod_PLANT_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภทพืช"
  mod_LITHOID_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภทหิน"
  mod_ROBOT_species_trait_points_add:0 "แต้มการปรับเปลี่ยนหุ่นยนต์"
  mod_MACHINE_species_trait_points_add:0 "แต้มการปรับเปลี่ยนเครื่องจักร"
@@ -1412,14 +1412,14 @@
  mod_BIOLOGICAL_species_trait_picks_add:0 "Organic $SPECIES_TRAIT_PICKS$"
  mod_MECHANICAL_species_trait_picks_add:0 "Mechanical $SPECIES_TRAIT_PICKS$"
  mod_MACHINE_species_trait_picks_add:0 "Machine $SPECIES_TRAIT_PICKS$"
- mod_HUM_species_trait_picks_add:0 "Humanoid $SPECIES_TRAIT_PICKS$"
+ mod_HUM_species_trait_picks_add:0 "มนุษย์ $SPECIES_TRAIT_PICKS$"
  mod_MAM_species_trait_picks_add:0 "Mammalian $SPECIES_TRAIT_PICKS$"
  mod_REP_species_trait_picks_add:0 "Reptilian $SPECIES_TRAIT_PICKS$"
  mod_AVI_species_trait_picks_add:0 "Avian $SPECIES_TRAIT_PICKS$"
  mod_ART_species_trait_picks_add:0 "Arthropoid $SPECIES_TRAIT_PICKS$"
  mod_MOL_species_trait_picks_add:0 "Molluscoid $SPECIES_TRAIT_PICKS$"
  mod_FUN_species_trait_picks_add:0 "Fungoid $SPECIES_TRAIT_PICKS$"
- mod_PLANT_species_trait_picks_add:0 "Plantoid $SPECIES_TRAIT_PICKS$"
+ mod_PLANT_species_trait_picks_add:0 "พืช $SPECIES_TRAIT_PICKS$"
  mod_LITHOID_species_trait_picks_add:0 "Lithoid $SPECIES_TRAIT_PICKS$"
  mod_AQUATIC_species_trait_picks_add:0 "Aquatic $SPECIES_TRAIT_PICKS$"
  MOD_COUNTRY_SENSOR_RANGE_ADD:0 "ระยะเซนเซอร์ของจักรวรรดิ"
@@ -1443,12 +1443,12 @@
  MOD_SHIP_COMMUNITY_TERRITORY_SPEED_MULT:0 "Community Space Sublight Speed"
  MOD_SHIP_COMMUNITY_TERRITORY_SPEED_MULT_DESC:0 "Affects the sublight Speed of ships flying through systems belonging to a Galactic Community member"
  MOD_VETO_COOLDOWN_MULT:0 "Veto Cooldown"
- MOD_EMERGENCY_MEASURES_COOLDOWN_MULT:0 "Emergency Measures Cooldown"
+ MOD_EMERGENCY_MEASURES_COOLDOWN_MULT:0 "คูลดาวน์มาตรการฉุกเฉิน"
  mod_shipsize_crisis_corvette_evasion_mult:1 "$crisis_corvette$ Evasion"
  mod_shipsize_crisis_corvette_disengage_chance_mult:1 "$crisis_corvette$ Disengage Chance"
  mod_shipsize_crisis_destroyer_tracking_mult:1 "$crisis_destroyer$ Tracking"
  mod_shipsize_crisis_cruiser_hull_mult:1 "HP $crisis_cruiser$"
- MOD_SHIP_DAMAGE_AGAINST_STARBASES_MULT:1 "Damage vs Starbases"
+ MOD_SHIP_DAMAGE_AGAINST_STARBASES_MULT:1 "ทำความเสียหายกับฐานอวกาศ"
  MOD_DIPLO_ACTION_ACCEPTANCE_ADD:0 "Diplomatic Acceptance"
  mod_ships_energy_upkeep_mult:0 "Ships £energy£ Energy Upkeep"
  mod_starbases_energy_upkeep_mult:0 "Starbases £energy£ Energy Upkeep"
