--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -156,7 +156,7 @@
  espionage.10.desc:2 "Our presence in the §Y[from.target.GetName]§! has taken on a clandestine aspect. $role_spymaster$ [from.leader.GetName] is now situated at the core of a burgeoning §HSpy Network§! in [from.target.GetAdj] space."
  espionage.11.name:0 "Spy Network Installed"
  espionage.11.desc:2 "Our presence in the §Y[from.target.GetName]§! has taken on a clandestine aspect: $role_spymaster$ [from.leader.GetName] has engaged Espionage protocols. Our newly-established §HSpy Network§! will allow us to observe [from.target.GetAdj] activities, infiltrating and intervening where necessary."
- espionage.15.name:0 "Spy Network Established"
+ espionage.15.name:0 "การก่อตั้งเครือข่ายสายลับได้เริ่มขึ้นแล้ว"
  espionage.15.desc:2 "We have received our first clandestine report from $role_spymaster$ [from.leader.GetName], inside the §Y[from.target.GetName]§!. This marks the establishment of our first §HSpy Network§! within xeno territory. Whenever they make a move, we stand a better chance of it playing right into our [owner.species.GetHandNamePlural]."
  espionage.16.desc:2 "We have received our first clandestine report from $role_spymaster$ [from.leader.GetName], inside the §Y[from.target.GetName]§!. This marks the foundation of our first §HSpy Network§! within a xeno empire - ideally positioned to warn us of their alien and duplicitous schemes."
  espionage.17.desc:2 "We have received our first clandestine report from $role_spymaster$ [from.leader.GetName], inside the §Y[from.target.GetName]§!. This heralds the foundation of our first §HSpy Network§! within a xeno empire. From this day forward, they too will realize the formative benefits of [owner.species.GetAdj]-honed information control..."
@@ -736,7 +736,7 @@
  resolution_category_custodian_reforms:0 "Custodian Reforms"
  resolution_category_galactic_institutions:0 "Galactic Institutions"
  resolution_category_term_limits:0 "Term Limits"
- resolution_galacticreforms_nominate_custodian:0 "Nominate Custodian"
+ resolution_galacticreforms_nominate_custodian:0 "เสนอชื่อผู้พิทักษ์"
  resolution_galacticreforms_nominate_custodian_desc:0 "When decisive action is needed, a member of the Council can be elevated to the position of Galactic Custodian. The Custodian is granted special powers and can propose new and powerful resolutions."
  nominate_custodian_requires_independence:0 "£trigger_no£ We must be fully independent to serve as Custodians."
  nominate_custodian_not_crisis:0 "£trigger_no£ The scrutiny of a Custodianship would expose our plans for the galaxy..."
@@ -796,7 +796,7 @@
  resolution_emperor_isd_desc:1 "Peace, stability, order - the very tenets on which the Galactic Imperium was founded. The ISD will hunt down criminals, terrorists, and seditionists wherever they may be hiding."
  resolution_emperor_itc:1 "Imperial Trade Company"
  resolution_emperor_itc_desc:0 "The ITC will operate under an Imperial Charter and its management and board of directors shall be under the direct control of the Galactic Emperor."
- resolution_category_imperial_council:0 "Imperial Council"
+ resolution_category_imperial_council:0 "สภาจักรวรรดิ"
  resolution_emperor_trial_of_advancement:0 "By Trial of Advancement"
  resolution_emperor_trial_of_advancement_desc:1 "Lest they are taken for granted, it should be possible to challenge the members of the Imperial Council for their seats in a Trial of Advancement. The complacent and the meek must be weeded out from the upper echelons of the Imperium."
  resolution_emperor_trial_of_advancement_tooltip:0 "Grants the §Y'Trial of Advancement'§! casus belli on members of the Imperial Council."
@@ -1390,7 +1390,7 @@
  crisis.4106.name:1 "Imperium Declares Us "Galactic Crisis""
  crisis.4106.desc.a:1 "Recognizing the threat we pose, the wretched members of the Galactic Imperium have passed a resolution condemning our actions and declaring us a §Y"crisis of galactic proportions."§! In a rare moment of Imperial unity, the members of the Imperium have all joined forces and declared war on us.\n\nUnder the leadership of the [gal_emperor.GetRulerTitle], their fleets are assembling to launch an attack on our territory. The battle for the galaxy has begun."
  crisis.4106.desc.b:1 "The [gal_emperor.GetRulerTitle] and their corrupt lackeys in the Imperial Senate have passed a resolution declaring us a "crisis" and a "threat to all sapient life." In light of these absurds allegations, a state of total war now exists between the [Root.GetName] and the entirety of the Galactic Imperium.\n\nThis war will continue until either us or the Imperium have been utterly destroyed... or they repeal the resolution."
- gal_custodian:0 "Galactic Custodian"
+ gal_custodian:0 "ผู้พิทักษ์กาแลกติก"
  gal_custodian_desc:0 "As Custodians of the Galactic Community, our influence in the galaxy has been increased."
  war_goal_wg_declared_crisis:0 "Crisis War"
  war_goal_wg_declared_crisis_desc:0 "Total War is waged between the Galactic Community and the Crisis empire.\n\nPeace can only be achieved by the utter destruction of one side, or if the Community passes a resolution to end hostilities."
