--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -7,7 +7,7 @@
  build_spy_network_DESC:1 "ส่งทูตที่จะทำงานสร้าง$spy_network$ภายในจักรวรรดิของพวกเขา"
  spy_network:1 "เครือข่ายสอดแนม"
  spy_network_plural:0 "เครือข่ายสอดแนม"
- spy_network_desc:2 "Sending an envoy to actively build a $spy_network$ and increase our §HInfiltration Level§!.\n\nWe will be unable to reassign them for §Y£time£360§!."
+ spy_network_desc:2 "ส่งทูตไปสร้าง $spy_network$ และเพิ่ม §Hระดับการแทรกซึม§! ของคุณ\n\nเราไม่สามารถกำหนดใหม่ได้เป็นเวลา §Y£time£360§!"
  ENVOY_spy_network:1 "ยุ่งกับการสร้าง §H$spy_network$§! ใน $LOCATION|H$"
  ESPIONAGE_OPERATION_NOT_OWNER:1 "ไม่ได้เป็นเจ้าของ $spy_network$"
  ACTIVE_FILTER:0 "Active"
@@ -48,7 +48,7 @@
  ESPIONAGE_OPERATION_FINISHED:0 "ปฏิบัติการเสร็จสิ้น"
  ESPIONAGE_OPERATION_LOCKED:0 "Operation locked"
  ESPIONAGE_OPERATION_PHAZE_ZERO:0 "§HOperation Summary§!"
- ESPIONAGE_OPERATION_PHAZE_ZERO_DELAYED:0 "§GClick to view§!"
+ ESPIONAGE_OPERATION_PHAZE_ZERO_DELAYED:0 "§Gคลิกเพื่อดู§!"
  ESPIONAGE_OPERATION_PHAZE_TITLE:0 "ขั้นที่ $PHASE$"
  ESPIONAGE_OPERATION_SETUP_TITLE:0 "เริ่มปฏิบัติการ"
  ESPIONAGE_OPERATION_LOG_ROLL_TOOLTIP:1 "§HPhase Results§!\n$ESPIONAGE_OPERATION_CLUES$ Gained: $GAINED|Y$\n\nResult: $RESULT|Y$\n  Roll: $ROLL|Y$\n  $ESPIONAGE_OPERATION_CLUES$: $CLUES|Y$\n  Skill Bonus: $BONUS|Y$\n  Difficulty: $DIFFICULTY|R$\n\n§ERoll Outcomes:§!\n§RFailure§!: Results §Y1§! or less add §Y0§! $ESPIONAGE_OPERATION_CLUES$.\n§YProgress§!: Results between §Y2-8§! or a perfect roll of §Y10§! add §Y1§! $ESPIONAGE_OPERATION_CLUES$.\n§GProgress§!: Results between §Y9-13§! add §Y2§! $ESPIONAGE_OPERATION_CLUES$."
@@ -114,7 +114,7 @@
  operation_sleeper_cells:0 "เตรียมพร้อม 'เซลล์ที่นอนหลับ'"
  operation_sleeper_cells_desc:0 "We have more pressing uses for our intelligence operatives at this time - but with careful preparations, we can preserve most of our Spy Network for future needs."
  operation_sleeper_cells_on_success:0 "$IF_SUCCESSFUL|E$\nCease activity within this Spy Network, allowing its $role_spymaster$ to be reassigned whilst also preventing its $INFILTRATION_LEVEL$ from decaying."
- operation_sabotage_starbase:1 "Sabotage Starbase Facility"
+ operation_sabotage_starbase:1 "ก่อวินาศกรรมสิ่งอำนวยความสะดวกบนฐานอวกาศ"
  operation_sabotage_starbase_desc:0 "Starbases are the beating heart of any empire. It'd be a shame if something happened to that one."
  operation_sabotage_starbase_orbring_desc:0 "Starbases and Orbital Rings are the beating heart of any empire. It'd be a shame if something happened to that one."
  operation_sabotage_starbase_on_success:1 "$IF_SUCCESSFUL|E$\nDestroy a random Module or Building on a particular Starbase facility. Will not affect Shipyard Modules."
@@ -156,16 +156,16 @@
  operation_spark_rebellion_on_success:0 "$IF_SUCCESSFUL|E$\nForm a Rebellion and declare war against the Galactic Imperium."
  MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD:0 "Operation Difficulty"
  MOD_ESPIONAGE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD$"
- MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD:0 "Hostile Operation Difficulty"
+ MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD:0 "ความยากของปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD$"
  MOD_ESPIONAGE_OPERATION_COST_ADD:0 "Operation Cost"
  MOD_ESPIONAGE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_OPERATION_COST_ADD$"
- MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD:1 "Hostile Operation Infiltration Required"
+ MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD:1 "จำเป็นต้องมีการแทรกซึมในปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD$"
  MOD_ESPIONAGE_OPERATION_SKILL_ADD:0 "สกิลทักษะการปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_SKILL_MULT:0 "$MOD_ESPIONAGE_OPERATION_SKILL_ADD$"
  MOD_ESPIONAGE_OPERATION_SPEED_MULT:0 "Operation Speed"
- MOD_ESPIONAGE_HOSTILE_OPERATION_UPKEEP_ADD:0 "Hostile Operation Upkeep"
+ MOD_ESPIONAGE_HOSTILE_OPERATION_UPKEEP_ADD:0 "ค่าบำรุงรักษาปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_UPKEEP_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_UPKEEP_ADD$"
  MOD_INTEL_ENCRYPTION_ADD:0 "การเข้ารหัส"
  MOD_INTEL_ENCRYPTION_MULT:0 "$MOD_INTEL_ENCRYPTION_ADD$"
@@ -199,16 +199,16 @@
  mod_op_cat_economy_difficulty_add:1 "Operation Difficulty ($op_cat_economy$)"
  mod_op_cat_technology_difficulty_add:1 "Operation Difficulty ($op_cat_technology$)"
  mod_op_cat_military_difficulty_add:1 "Operation Difficulty ($op_cat_military$)"
- mod_hostile_op_cat_subterfuge_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_subterfuge$)"
- mod_hostile_op_cat_sabotage_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_sabotage$)"
- mod_hostile_op_cat_manipulation_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_manipulation$)"
- mod_hostile_op_cat_provocation_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_provocation$)"
- mod_hostile_op_cat_government_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_government$)"
- mod_hostile_op_cat_diplomacy_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_diplomacy$)"
- mod_hostile_op_cat_economy_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_economy$)"
- mod_hostile_op_cat_technology_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_technology$)"
- mod_hostile_op_cat_military_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_military$)"
- mod_hostile_operation_sabotage_starbase_difficulty_add:0 "Hostile Operation Difficulty ($operation_sabotage_starbase$)"
+ mod_hostile_op_cat_subterfuge_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_subterfuge$)"
+ mod_hostile_op_cat_sabotage_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_sabotage$)"
+ mod_hostile_op_cat_manipulation_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_manipulation$)"
+ mod_hostile_op_cat_provocation_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_provocation$)"
+ mod_hostile_op_cat_government_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_government$)"
+ mod_hostile_op_cat_diplomacy_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_diplomacy$)"
+ mod_hostile_op_cat_economy_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_economy$)"
+ mod_hostile_op_cat_technology_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_technology$)"
+ mod_hostile_op_cat_military_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_military$)"
+ mod_hostile_operation_sabotage_starbase_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($operation_sabotage_starbase$)"
  mod_op_cat_subterfuge_skill_add:1 "Operation Skill ($op_cat_subterfuge$)"
  mod_op_cat_sabotage_skill_add:1 "Operation Skill ($op_cat_sabotage$)"
  mod_op_cat_manipulation_skill_add:1 "Operation Skill ($op_cat_manipulation$)"
@@ -310,7 +310,7 @@
  asset_veteran_desc:0 "An injured war veteran that was lost in the wheels of bureaucracy. We came to their aid."
  asset_internal_organs:0 "Internal Organs"
  asset_internal_organs_desc:0 "Hands-on knowledge of the functioning of our adversaries' anatomy can be remarkably useful during all manner of espionage operations."
- asset_synapse_drone:0 "Synapse Drone"
+ asset_synapse_drone:0 "โดรนไซแนปส์"
  asset_synapse_drone_desc:0 "Operatives can use this deviant synapse drone to receive thoughts from the hive."
  asset_ephapse_relay:0 "Ephapse Relay"
  asset_ephapse_relay_desc:0 "This malformed ephapse relay can be used to alter messages received by the hive."
@@ -443,7 +443,7 @@
  STRING_ambassador_CAP:0 "Ambassador"
  STRING_fake_ambassador_CAP:0 ""Ambassador""
  STRING_envoy_location_name:0 "[This.envoy_location_country.GetName]"
- STRING_galcom:0 "Galactic Community"
+ STRING_galcom:0 "ประชาคมกาแลกติก"
  STRING_federation_name:0 "[This.Owner.Federation.GetName]"
  gestalts_are_boring:0 "The [This.GetName] lacks enough personality to become involved in scandals"
  saturated_with_scandals:2 "$TRIGGER_FAIL$The [Root.Target.GetName] have been saturated with scandals.\nWe may try again after §Y[Root.operation_diplomatic_incident_timer]§!"
