--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -5,12 +5,12 @@
  FIRST_CONTACT_NAME_WITH_LOCATION:0 "การติดต่อแรกกับ $NAME|Y$ ที่ $LOC|Y$"
  FIRST_CONTACT_ASSIGN_ENVOY:0 "§Hแต่งตั้งทูตเพื่อเรียนรู้เพิ่มเติมเกี่ยวกับ $NAME|Y$§!"
  MESSAGE_FIRST_CONTACT_FINISHED_TITLE:0 "การติดต่อแรกเสร็จสิ้น"
- MESSAGE_FIRST_CONTACT_FINISHED_DESC:1 "We have finished a First Contact procedure."
+ MESSAGE_FIRST_CONTACT_FINISHED_DESC:1 "เราได้เสร็จสิ้นขั้นตอนการติดต่อครั้งแรก"
  MESSAGE_FIRST_CONTACT_STAGE_FINISHED_TITLE:0 "Archaeological Site Progress"
  MESSAGE_FIRST_CONTACT_STAGE_FINISHED_DESC:0 "We have unlocked the next stage of an archaeological site"
  MESSAGE_FIRST_CONTACT_DISCOVERED_TITLE:1 "การติดต่อแรก"
  MESSAGE_FIRST_CONTACT_DISCOVERED_DESC:1 "เราได้ทำการติดต่อครั้งแรกกับบางสิ่งที่ไม่รู้จัก"
- FIRST_CONTACT_FINISH:0 "Ends the First Contact procedure with $COUNTRY|Y$."
+ FIRST_CONTACT_FINISH:0 "สิ้นสุดขั้นตอนการติดต่อครั้งแรกกับ $COUNTRY|Y$"
  FIRST_CONTACT_FINISH_NOT:0 "Does not end the First Contact procedure with $COUNTRY|Y$."
  SET_FIRST_CONTACT_STAGE:0 "การติดต่อครั้งแรกเดินหน้า"
  first_contact:0 "การติดต่อแรก"
@@ -130,7 +130,7 @@
  FC_RELATION_LABEL_UNKNOWN:0 "ไม่ทราบ"
  FC_RELATION_LABEL_ISOLATIONIST:0 "Isolationist"
  FC_RELATION_LABEL_RECEPTIVE:0 "Receptive"
- FC_RELATION_LABEL_HOSTILE:0 "Hostile"
+ FC_RELATION_LABEL_HOSTILE:0 "ศัตรู"
  FC_RELATION_DESC_UNKNOWN:0 "We do not yet know how these aliens will respond to our Contact."
  FC_RELATION_DESC_ISOLATIONIST:0 "These aliens would prefer to be left alone. Perhaps that is for the best."
  FC_RELATION_DESC_RECEPTIVE:0 "These aliens appear eager to open peaceful communications with us."
@@ -138,10 +138,10 @@
  PACT_communications:0 "Communications"
  PACT_guarantee_independence:0 "Guaranteed Independence"
  PACT_non_aggression_pact:0 "Non-Aggression Pact"
- PACT_galactic_community:0 "Galactic Community"
- PACT_galactic_custodian:0 "Galactic Custodian"
- PACT_galactic_emperor:0 "Galactic Emperor"
- PACT_galactic_emperor_heightened_security:0 "Heightened Security"
+ PACT_galactic_community:0 "ประชาคมกาแลกติก"
+ PACT_galactic_custodian:0 "ผู้พิทักษ์กาแลกติก"
+ PACT_galactic_emperor:0 "จักรพรรดิกาแลกติก"
+ PACT_galactic_emperor_heightened_security:0 "ผู้รักษาความปลอดภัยสูงสุด"
  PACT_closed_borders:0 "Closed Borders"
  PACT_overlord:0 "เจ้าเหนือหัว"
  PACT_subject:0 "Subject"
@@ -182,28 +182,28 @@
  IS_FIRST_CONTACT_SITE_CLUES_TRIGGER:0 "Investigation insights $COMPARE$ $NUM_COMPARE$"
  FC_SPECIES:0 "เผ่าพันธุ์"
  FC_SPECIES_TT:0 "§H$FC_SPECIES$§!\nShows you the species you are trying to contact."
- start_first_contact:0 "Starts the §YFirst Contact§! process with the §Y[This.ContactCountry.GetName]§!."
+ start_first_contact:0 "เริ่มกระบวนการ §Yติดต่อครั้งแรก§! กับ §Y[This.ContactCountry.GetName]§!"
  PHASE_IN_PROGRESS:0 "กำลังตรวจสอบอย่างต่อเนื่อง"
  FC_ASSIGN_ENVOY_TO_PROGRESS:0 "มอบหมายให้ทูตตรวจสอบ"
  STAGE_TITLE:0 "ขั้นที่ $STAGE$"
  STAGE_HELP_FC:0 "§GClick to view full stage events and outcomes§!"
  THEIR_ENCRYPTION:1 "Their Encryption: $VALUE$"
  OUR_DECRYPTION:2 "Our Codebreaking: $VALUE$"
- IS_FIRST_CONTACT_UNDER_INVESTIGATION_TRIGGER:0 "The $NAME|Y$ are being investigated"
+ IS_FIRST_CONTACT_UNDER_INVESTIGATION_TRIGGER:0 "กำลังสอบสวนเรื่อง $NAME|Y$"
  MESSAGE_FIRST_CONTACT_ABORTED_TITLE:0 "การติดต่อแรกถูกยกเลิก"
- MESSAGE_FIRST_CONTACT_ABORTED_DESC:1 "Our First Contact process with the $COUNTRY|H$ has been aborted as they no longer exist."
+ MESSAGE_FIRST_CONTACT_ABORTED_DESC:1 "การติดต่อครั้งแรกของเรากับ $COUNTRY|H$ ถูกยกเลิกเนื่องจากพวกเขาไม่มีอยู่แล้ว"
  MESSAGE_FIRST_CONTACT_ABORTED_THEY_COMPLETED_TITLE:0 "$MESSAGE_FIRST_CONTACT_ABORTED_TITLE$"
- MESSAGE_FIRST_CONTACT_ABORTED_THEY_COMPLETED_DESC:1 "Our First Contact process with the $COUNTRY|H$ has been aborted as they have established communications with us."
+ MESSAGE_FIRST_CONTACT_ABORTED_THEY_COMPLETED_DESC:1 "การติดต่อครั้งแรกของเรากับ $COUNTRY|H$ ถูกยกเลิกเนื่องจากได้เริ่มมีการติดต่อกับเราแล้ว"
  first_contact_skill_increased:1 "§GWe will find future First Contact processes easier to complete.§!"
  first_contact_skill_1:0 "First Contact Experience"
  first_contact_skill_2:0 "First Contact Proficiency"
  first_contact_skill_3:0 "First Contact Expertise"
  first_contact_skill_4:0 "First Contact Mastery"
- FIRST_CONTACT_ADD_INTEL:0 "Intel on the §Y[Root.ContactCountry.GetRealName]§! set to $INTEL|0G$\n"
+ FIRST_CONTACT_ADD_INTEL:0 "ข้อมูลข่าวกรองของ §Y[Root.ContactCountry.GetRealName]§! กำหนดเป็น $INTEL|0G$\n"
  seek_friends_tt:1 "We shall seek friendly relations with the §Y[contact_empire.GetName]§!."
- seek_enemies_tt:1 "We shall prepare for hostilities with the §Y[contact_empire.GetName]§!, giving us §G+33%§! spy network growth on them."
+ seek_enemies_tt:1 "เราจะเตรียมรับมือกับ §Y[contact_empire.GetName]§! ซึ่งจะทำให้เครือข่ายสายลับของพวกเรา §G+33%§! ในเขตแดนของเขา"
  seek_enemies_tt_short:0 "We shall prepare for hostilities with the §Y[contact_empire.GetName]§!."
- seek_isolation_tt:1 "We shall seek to distance ourselves from the §Y[contact_empire.GetName]§!, giving them §R-33%§! spy network growth on us."
+ seek_isolation_tt:1 "เราจะพยายามทำตัวให้ห่างจาก §Y[contact_empire.GetName]§! ซึ่งจะทำให้เครือข่ายสายลับของพวกเขา §R-33%§! ในเขตแดนของเรา"
  seek_isolation_tt_short:0 "We shall seek to distance ourselves from the §Y[contact_empire.GetName]§!."
  friendship_already_precluded:2 "As we have already acted with hostility towards the §Y[contact_empire.GetName]§!, we can dispense with the pleasantries."
  action.1.fe_option:0 "The §Y[contact_empire.GetName]§! care little for our diplomatic maneuvering."
@@ -238,10 +238,10 @@
  action.1.desc_hostile_to_homicidal_04:0 "You are right to attack us, [Root.GetSpeciesNamePlural], but that will not save you: you are still our prey."
  action.1.desc_hostile_to_homicidal_05:0 "Your hostility is unfortunate. We had considered sparing you, being fellow [Root.GetSpeciesNamePlural] as you are, but it seems you will need to be... re-educated, at the very least."
  first_contact_start_title:0 "[This.GetFirstContactStart]"
- first_contact.1.name:0 "Encounter in [This.System.GetName]"
+ first_contact.1.name:0 "การเผชิญหน้ากันที่ [This.System.GetName]"
  first_contact.1.desc.base:1 "เราได้ติดต่อกับเอเลี่ยนลึกลับในระบบดาว §H[This.System.GetName]§! เป็นครั้งแรก สำหรับตอนนี้เราจะตั้งชื่อพวกเขาว่า §H[This.ContactCountry.GetName]§! จนกว่าเราจะสามารถหาข้อมูลเพิ่มเติมเกี่ยวกับพวกเขาได้"
  first_contact.1.desc.default:0 "$first_contact.1.desc.base$ หากพวกเขามีภาษา เราต้องถอดรหัสเพื่อสร้างการติดต่อสื่อสาร"
- first_contact.1.desc.xenophobe:0 "$first_contact.1.desc.base$ If they possess a language, we should decipher it so that we can assess how much of a threat they pose."
+ first_contact.1.desc.xenophobe:0 "$first_contact.1.desc.base$ หากพวกเขามีภาษา เราควรถอดรหัสเพื่อให้เราสามารถประเมินได้ว่า พวกเขาเป็นภัยคุกคามมากแค่ไหน"
  first_contact.1.desc.terminator:1 "We have made first contact with unknown aliens in the §H[This.System.GetName]§! system. We must determine whether they are organic with all haste so that their termination can be scheduled, should it prove necessary. For now, they have been given the designation §H[This.ContactCountry.GetName]§!."
  first_contact.1.desc.devourer:1 "We have made first contact with mysterious aliens in the §H[This.System.GetName]§! system. We should find out more about them so that we may decide whether they would be suitable nutrition for our drones. For now, they have been given the designation §H[This.ContactCountry.GetName]§!."
  first_contact.1.desc.purifier:1 "We have made first contact with mysterious aliens in the §H[This.System.GetName]§! system. We should find out more about them so we can assess whether they should be our next targets for extermination. For now, they have been given the designation §H[This.ContactCountry.GetName]§!."
@@ -275,7 +275,7 @@
  first_contact.50.C1:0 "We must find out their secrets."
  first_contact.50.C.machine:0 "Initiating Subversion Protocols"
  first_contact.50.C.tooltip:0 "§RWe will attempt to hack into their databanks to find out more about them. If they detect our attempts, they will likely be angered by this course of action.§!"
- first_contact.60.name:0 "Communications Received"
+ first_contact.60.name:0 "การสื่อสารที่ได้รับ"
  first_contact.60.desc.default:1 "The §H[This.ContactCountry.GetName]§! appear eager to establish communications with us, having sent a large audio and visual §Htransmission§! that appears to offer the key to translating their language."
  first_contact.60.desc.default.default:0 "$first_contact.60.desc.default$\n\n$first_contact.60.desc.x.default.end$"
  first_contact.60.desc.default.hive:0 "$first_contact.60.desc.default$\n\nWe will surely be able to communicate with them soon by feeding this data to our linguistic drones. Of course, we will have to trust them that their offered translations are sufficiently precise for us to accurately comprehend."
@@ -290,7 +290,7 @@
  first_contact.60.desc.x.machine.end:0 "We have begun inputting this transmission into our translation algorithms and expect to be able to extract sufficient data to communicate with the [This.ContactCountry.GetName] soon."
  first_contact.60.A.cautious:0 "How naive of them."
  first_contact.60.A.proactive:0 "Their trust is most welcome."
- first_contact.100.name:0 "Communications Established"
+ first_contact.100.name:0 "เริ่มการติดต่อสื่อสาร"
  first_contact.100.desc:1 "Our efforts to decipher the signals picked up from the §H[This.ContactCountry.GetName]§! have paid off, and we have finally made a breakthrough. While our mastery of their language may not be complete, we have managed to successfully open diplomatic channels with the civilization we now know to be the §H[This.ContactCountry.GetRealName]§!."
  first_contact.100.desc.homicidal:1 "Our efforts to decipher the signals picked up from the §H[This.ContactCountry.GetName]§! have paid off, and we have finally made a breakthrough. While our mastery of their language may not be complete, we have managed to identify them as the §H[This.ContactCountry.GetRealName]§! and are now able to communicate with them, should we ever feel the need."
  first_contact.101.name:0 "They are [This.Owner.GetSpeciesNamePlural]!"
@@ -792,9 +792,9 @@
  first_contact.1060.desc.gestalt:0 "การเผชิญหน้ากับสิ่งมีชีวิตต่างดาวเมื่อเร็วๆนี้ทำให้เราจำเป็นต้องตัดสินใจว่าเราควรปฏิบัติอย่างไรต่ออารยธรรมต่างดาวที่ชาญฉลาดที่เราอาจพบเจอ\n\nความเป็นไปได้อย่างหนึ่งคือเราต้องพยายามติดต่ออย่างสันติกับพวกเขาโดยเร็วที่สุดโดยการส่งข้อมูลที่จำเป็นเพื่อให้พวกเขาแปลการสื่อสารของเราได้ อย่างไรก็ตามสิ่งนี้อาจเป็นความผิดพลาดหากพวกเขามีเจตนาเป็นศัตรูกับเรา\n\nทางเลือกที่ปลอดภัยที่สุดคือดำเนินการด้วยความระมัดระวังและพยายามสื่อสารกับพวกเขาโดยไม่ให้ข้อมูลเกี่ยวกับเรามากเกินไป ในทางกลับกัน เราสามารถเคลื่อนไหวเชิงรุกมากขึ้นเพื่อค้นหาข้อมูลเพิ่มเติมเกี่ยวกับพวกเขาและขับไล่พวกเขาออกจากดินแดนของเรา อย่างไรก็ตามสิ่งนี้แน่นอนว่าจะทำให้พวกเขาเป็นปรปักษ์กับเรา"
  first_contact.1060.A:0 "เราจะทักทายต่างดาวโดยการอ้าแขนรับ"
  first_contact.1060.A.machine:0 "เราจะทักทายต่างดาวโดยการอ้าแขนรับ"
- first_contact.1060.A.tooltip:1 "This policy has the following effects:\n$first_contact_proactive_effects$$MOD_FIRST_CONTACT_SPEED_MULT$: §G+10%§!"
+ first_contact.1060.A.tooltip:1 "นโยบายนี้มีผลดังต่อไปนี้:\n$first_contact_proactive_effects$$MOD_FIRST_CONTACT_SPEED_MULT$: §G+10%§!"
  first_contact.1060.B:0 "ควรที่จะระมัดระวัง"
- first_contact.1060.B.tooltip:1 "This policy has the following effects:\n$first_contact_cautious_effects$$MOD_FIRST_CONTACT_DEFENSE_ADD$: §G+2§!"
+ first_contact.1060.B.tooltip:1 "นโยบายนี้มีผลดังต่อไปนี้:\n$first_contact_cautious_effects$$MOD_FIRST_CONTACT_DEFENSE_ADD$: §G+2§!"
  first_contact.1060.C:0 "เราต้องขับไล่ผู้ที่จะคุกคามเรา"
  first_contact.1060.C.tooltip:0 "นโยบายนี้มีผลดังต่อไปนี้:\n$first_contact_attack_allowed_effects$"
  opinion_caught_hacking:0 "Caught Hacking"
@@ -802,7 +802,7 @@
  opinion_hostile_first_contact_vivisection:0 "Vivisections"
  opinion_hostile_first_contact_hungry:0 "Plunging the Depths of Depravity"
  opinion_first_contact_delightful_aliens:0 "Delightful Aliens"
- opinion_first_contact_repulsive_aliens:0 "Repulsive Aliens"
+ opinion_first_contact_repulsive_aliens:0 "มนุษย์ต่างดาวที่น่ารังเกียจ"
  opinion_first_contact_speak_like_us:0 "Speak Like Us"
  opinion_first_contact_not_very_intelligent:0 "Not the Brightest"
  opinion_first_contact_very_insulting:1 "A Poor Choice of Words"
@@ -820,13 +820,13 @@
  robot_appreciation_desc:0 "Our encounter with a civilization of robots has left many marvelling about the possibilities our own progress in AI technologies could unlock."
  alien_appreciation:0 "Alien Appreciation"
  alien_appreciation_desc:0 "Our encounter with a particularly attractive alien species has caused a surge in volunteers for our Interstellar Exploration department."
- robot_revulsion:0 "Terrible Tin Cans"
+ robot_revulsion:0 "หุ่นยนต์ที่น่ารังเกียจ"
  robot_revulsion_desc:0 "Our encounter with a civilization of robots has left many skeptical about the influence of automation on our society."
- alien_revulsion:0 "Repulsive Aliens"
+ alien_revulsion:0 "มนุษย์ต่างดาวที่น่ารังเกียจ"
  alien_revulsion_desc:0 "Our encounter with a particularly repulsive alien species has persuaded many to look inwards to our own rather than outwards towards others."
- repulsive_robot_contact:0 "Repulsive Robots Tolerated"
- repulsive_alien_contact:0 "Repulsive Aliens Tolerated"
- repulsive_aliens_uncondemned:0 "Repulsive Aliens Tolerated"
+ repulsive_robot_contact:0 "อดทนกับหุ่นยนต์ที่น่ารังเกียจ"
+ repulsive_alien_contact:0 "อดทนกับมนุษย์ต่างดาวที่น่ารังเกียจ"
+ repulsive_aliens_uncondemned:0 "อดทนกับมนุษย์ต่างดาวที่น่ารังเกียจ"
  repulsive_aliens_uncondemned_desc:0 "Our failure to express opposition to the worrying new threat we have encountered has sparked opposition among our populace."
  first_contact_challenge_not_returned:0 "Challenge Not Returned"
  first_contact_challenge_not_returned_desc:0 "Our steadfast dedication to handling first contact in a rational and scientific manner is a major boon to our exploration department, although some worry that we may be putting ourselves at risk by not pre-empting conflict with apparently hostile civilizations."
@@ -882,7 +882,7 @@
  first_contact_critters.1.A:0 "ดำเนินการต่อ"
  first_contact_critters.5.name:0 "$leviathans.99.name$"
  first_contact_critters.5.desc:1 "After successfully translating their language, we have established communications with the independent space station of the §H[This.ContactCountry.GetRealName]§!."
- first_contact_critters.5.A:0 "Let's see if they want to talk."
+ first_contact_critters.5.A:0 "ลองดูว่าพวกเขาต้องการพูดคุยหรือไม่"
  first_contact_critters.10.name:0 "Weird Heat Blobs"
  first_contact_critters.10.desc:0 "Long range scanners have picked up readings in the [This.System.GetName] system that could best be described as giant heat blobs. It's worth investigating."
  first_contact_critters.10.A:0 "Make it so."
