--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -37,7 +37,7 @@
  quantum_catapult_restored:0 "$quantum_catapult_1$"
  quantum_catapult_restored_DESC:1 "$quantum_catapult_3_DESC$"
  quantum_catapult_BYPASS:0 "Quantum Catapult"
- quantum_catapult_BYPASS_DESC:1 "This system contains a §Y$quantum_catapult_1$§!"
+ quantum_catapult_BYPASS_DESC:1 "ระบบนี้มี §Y$quantum_catapult_1$§!"
  FLEETORDER_QUANTUM_CATAPULT_HEADER:0 "Catapult Fleet"
  FLEETORDER_QUANTUM_CATAPULT_DESC:0 "Launch a fleet from a system with a §YQuantum Catapult§!."
  QUANTUM_CATAPULT_PENALTY:0 "§YQuantum Catapults§! lose accuracy with range, so fleets will appear in a random system within the indicated scatter radius."
@@ -83,7 +83,7 @@
  orbital_ring_restored:0 "$orbital_ring$"
  orbital_ring_restored_DESC:0 "$orbital_ring_tier_1_MEGASTRUCTURE_DETAILS$"
  HYPER_RELAY_GALACTIC:0 "$hyper_relay$"
- HYPER_RELAY_GALACTIC_DESC:0 "This system contains a §Y$hyper_relay$§!"
+ HYPER_RELAY_GALACTIC_DESC:0 "ระบบนี้มี §Y$hyper_relay$§!"
  FLEETORDER_CATAPULT_WINDUP:1 "Catapult Windup: $DAYS|Y0$ Days"
  FLEETORDER_CATAPULT:1 "Preparing to Launch"
  FLEET_ORDER_CATAPULT_NO_TARGETS:0 "§RNo eligible systems in target area!§!"
@@ -107,7 +107,7 @@
  sm_orbital_ring_gun_battery_desc:1 "Adds two medium-size weapon slots to the Orbital Ring.\n"
  sm_orbital_ring_missile_battery:0 "Planetary Defense Batteries"
  sm_orbital_ring_missile_battery_desc:1 "Adds two missile weapon slots to the Orbital Ring.\n"
- sm_orbital_ring_hangar_bay:0 "Planetary Defense Hangars"
+ sm_orbital_ring_hangar_bay:0 "โรงเก็บเครื่องบินป้องกันดาวเคราะห์"
  sm_orbital_ring_hangar_bay_desc:1 "Adds a hangar for Strike Craft to the Orbital Ring.\n"
  FLEETORDER_ENTERING_BYPASS:1 "Transiting via $BYPASS_TYPE|H$ to $SYSTEM|H$: $DAYS|Y0$ Days"
  FLEETORDER_ENTERING_BYPASS_EXT:1 "Transiting via $BYPASS_TYPE|H$ to $SYSTEM|H$\nProgress: $CUR|Y0$/$COST|Y0$ ( $DAYS|Y$ Days )"
@@ -126,10 +126,10 @@
  sm_ring_consumer_goods_hub_desc:0 "Transferring logistics operations to automated systems on the Orbital Ring allows planetside $planet_buildings_factories$ to run continuously at full speed."
  sm_ring_alloys_hub:0 "Alloy Processing Facilities"
  sm_ring_alloys_hub_desc:1 "Alloys from the surface are further processed in orbit, creating usable materials from what would otherwise be wasted by-products."
- sm_ring_trade_hub:0 "The Giga-Mall"
+ sm_ring_trade_hub:0 "ห้างสรรพสินค้าขนาดใหญ่"
  sm_ring_trade_hub_desc:1 "Moving all shopping and trade facilities to the Orbital Ring means our Clerks can facilitate more business, more effectively than ever before."
  sm_ring_trade_hub_effect:0 "£amenities£ ความอยู่ดีกินดีจาก £job_clerk£ $job_clerk_plural$: §G+1§!"
- sm_ring_bureaucracy_hub:0 "Orbital Filing System"
+ sm_ring_bureaucracy_hub:0 "ระบบการจัดเก็บข้อมูลวงโคจร"
  sm_ring_bureaucracy_hub_desc:1 "Efficiency and progress can be ours once more, now that our Administrators have near instant access to the paperwork that defines their lives."
  sm_ring_synapse_hub:0 "Synaptic Relays"
  sm_ring_synapse_hub_desc:0 "Portions of the Orbital Ring have been modified to enhance synaptic signals, improving control over drones on the surface."
