--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -10,12 +10,12 @@
  RESULTING_LOYALTY_CHANGE:0 "Changes in Terms"
  RESULTING_LOYALTY_BASE_SUBJECT:0 "Changes favoring Subject: $BASE|+=1$"
  RESULTING_LOYALTY_BASE_OVERLORD:0 "Changes favoring Overlord: $BASE|+=1$"
- RESULTING_LOYALTY_MODIFIER:0 "Loyalty modifier: $MODIFIER|0%Y$"
+ RESULTING_LOYALTY_MODIFIER:0 "ความภักดีมีการเปลี่ยนแปลง: $MODIFIER|0%Y$"
  LOYALTY_MONTHLY_VALUE:0 "$VAL|+=1$"
  LOYALTY_VALUE_WITH_MONTHLY:0 "$LOYALTY|+=0$ ($MONTHLY|1=+$)"
- LOYALTY_MONTHLY_CHANGE_TOTAL:1 "§WMonthly Change§!: $VAL|=+2$"
+ LOYALTY_MONTHLY_CHANGE_TOTAL:1 "§Wการเปลี่ยนแปลงรายเดือน§!: $VAL|=+2$"
  LOYALTY_MONTHLY_CHANGE_COUNTRY:0 "ฐาน: $VAL|=+$"
- LOYALTY_MONTHLY_CHANGE_HOLDINGS:0 "Holdings: $VAL|=+$"
+ LOYALTY_MONTHLY_CHANGE_HOLDINGS:0 "การถือครอง: $VAL|=+$"
  LOYALTY_MONTHLY_CHANGE_INTEGRATION:0 "Subject integration: $VAL|=+$"
  LOYALTY_MONTHLY_CHANGE_OPINION:0 "Subject opinion: $VAL|=+$"
  LOYALTY_MONTHLY_CHANGE_RESOURCE_CONTRIBUTION:0 "Resource Contribution: $VAL|=+$"
@@ -34,8 +34,8 @@
  RESOURCE_TERM_WITH_ICONS:0 "$TERM$ $ICONS$"
  AGREEMENT_TERM_HEADER:0 "$TERM$:"
  LOYALTY_UNAVAILABLE_INTEL_DESC:0 "You do not have Intel on their Loyalty."
- LOYALTY_TOOLTIP_TITLE:0 "§HLoyalty§!"
- MONTHLY_LOYALTY_TOOLTIP_TITLE:0 "§HMonthly Loyalty Change§!"
+ LOYALTY_TOOLTIP_TITLE:0 "§Hความภักดี§!"
+ MONTHLY_LOYALTY_TOOLTIP_TITLE:0 "§Hการเปลี่ยนแปลงความภักดีรายเดือน§!"
  LOYALTY_VALUE_DESC:0 "Their Loyalty to $OVERLORD|H$ is $LOYALTY|+=0$"
  LOYALTY_VALUE_FOR_PLAYER_DESC:0 "Our Loyalty to $OVERLORD|H$ is $LOYALTY|+=0$"
  LOYALTY_DESC:0 "§ELoyalty decides the relationship between the two parties in an§! §HAgreement§!§E: The§! §HOverlord§! §Eand§! §HSubject§!"
@@ -68,7 +68,7 @@
  xenos_ui_loyalty_format:0 "$VAL|+$"
  xenos_ui_overlord_agreements_count:0 "ข้อตกลง: $VAL|H$"
  xenos_ui_overlord_reputation:0 "Reputation: $VAL|_$"
- xenos_ui_overlord_holdings_count:0 "Holdings: $VAL|H$"
+ xenos_ui_overlord_holdings_count:0 "การถือครอง: $VAL|H$"
  xenos_ui_subject_view_loyalty:0 "£loyalty£ $VAL|W0$"
  xenos_ui_specialist_conversion_tooltip:0 "$NAME|Y$ will become a $SPECIALIST_TYPE|Y$ specialist in $DAYS_LEFT|Y$ days"
  xenos_ui_negotiate_agreement:1 "Terms Negotiation"
@@ -386,13 +386,13 @@
  ACTION_PLEDGE_SECRET_FEALTY_DESC:0 "Pledge a Secret Fealty to have §H[Recipient.GetName]§! as our new Overlord."
  ACTION_PLEDGE_SECRET_FEALTY_OFFER_DESC:0 "§H[Actor.GetName]§! has pledged a Secret Fealty to us."
  MESSAGE_PLEDGE_SECRET_FEALTY_TITLE:0 "$ACTION_PLEDGE_SECRET_FEALTY_TITLE$"
- ACTION_PROPOSE_SECRET_FEALTY_TITLE:0 "Propose Secret Fealty"
+ ACTION_PROPOSE_SECRET_FEALTY_TITLE:0 "สัญญาลับให้เราเป็นเจ้าเหนือหัวของพวกเขา"
  ACTION_PROPOSE_SECRET_FEALTY_DESC:0 "Propose for §H[Recipient.GetName]§! to pledge a Secret Fealty for us to become their new Overlord."
  ACTION_PROPOSE_SECRET_FEALTY_OFFER_DESC:0 "§H[Actor.GetName]§! has proposed for us to pledge a Secret Fealty to them."
  ACTION_PROPOSE_SECRET_FEALTY_PROPOSAL_FAILED_ACTOR:0 "Our proposal for §H[Recipient.GetName]§! to pledge a Secret Fealty to us was declined."
  ACTION_PROPOSE_SECRET_FEALTY_PROPOSAL_FAILED_RECIPIENT:0 "The proposal for us to pledge a Secret Fealty to §H[Actor.GetName]§! timed out and was auto-declined."
  MESSAGE_PROPOSE_SECRET_FEALTY_TITLE:0 "$ACTION_PROPOSE_SECRET_FEALTY_TITLE$"
- ACTION_BREAK_SECRET_FEALTY_TITLE:0 "Break Secret Fealty"
+ ACTION_BREAK_SECRET_FEALTY_TITLE:0 "ทำลายสัญญาลับ"
  ACTION_BREAK_SECRET_FEALTY_DESC:0 "Break Secret Fealty to §H[Recipient.GetName]§!."
  ACTION_BREAK_SECRET_FEALTY_OFFER_DESC:0 "§H[Actor.GetName]§! has broken their Secret Fealty to us."
  ACTION_PROPOSE_TO_BREAK_SECRET_FEALTY_TITLE:0 "End Secret Fealty"
@@ -414,7 +414,7 @@
  SUBJECT_ALREADY_HAS_SECRET_FEALTY:0 "They are pledging fealty to another empire."
  IS_SUBJECT_OF_OVERLORD:0 "§RThey are a subject of our Overlord.§!"
  IS_SUBJECT_WITHOUT_DIPLO:0 "They are a subject without independent diplomacy."
- HOLDINGS:0 "Holdings"
+ HOLDINGS:0 "การถือครอง"
  OUTLINER_OVERLORD_HOLDINGS:0 "$HOLDINGS$"
  MOD_PLANET_MAX_SUBJECT_HOLDING_BUILDINGS_ADD:1 "Max $HOLDINGS$"
  MOD_PLANET_MAX_OVERLORD_HOLDING_BUILDINGS_ADD:1 "Max $HOLDINGS$"
@@ -429,16 +429,16 @@
  OUTLINER_LOYALTY_VALUE:0 "£loyalty£ $VALUE|1Y$"
  OUTLINER_OVERLORD_HOLDING_BUILDINGS_NUM:0 " ($VALUE$)"
  HOLDINGS_TAB_LOYALTY_VALUE:0 "$VALUE|1Y$"
- MONTHLY_LOYALTY_CHANGE:0 "Monthly Loyalty Change"
+ MONTHLY_LOYALTY_CHANGE:0 "การเปลี่ยนแปลงความภักดีรายเดือน"
  HOLDINGS_MONTHLY_LOYALTY_CHANGE_DESC:0 "£loyalty£ Monthly Loyalty Change: $VALUE|1Y$"
  HOLDING_BUILDING_SLOTS_USED:0 "You have $NUM_BUILDINGS|Y$/$MAX_BUILDINGS|Y$ holdings currently built."
  HOLDINGS_EMPTY_corporate:0 "ไม่มีบริษัทถือครอง"
  HOLDINGS_EMPTY_subject_holding:0 "ไม่มีเจ้าเหนือหัวถือครอง"
- HOLDINGS_EMPTY:0 "No holdings"
- HOLDINGS_DESC_corporate:0 "A branch office can be established by §YCorporate§! empires to enable §Ycorporate holdings§!."
- HOLDINGS_DESC_subject_holding:0 "§YOverlord holdings§! can only be built by Overlords on Subject planets if agreed upon in their Subject §YAgreement§!."
+ HOLDINGS_EMPTY:0 "ไม่มีการถือครอง"
+ HOLDINGS_DESC_corporate:0 "สำนักงานสาขาสามารถจัดตั้งโดยจักรวรรดิประเภท §Yบริษัท/องค์กร§! ที่สามารถ §Yถือครองได้§!"
+ HOLDINGS_DESC_subject_holding:0 "§Yการถือครองโดยจักรวรรดิเจ้าเหนือหัว§! สามารถสร้างได้โดยจักรวรรดิเจ้าเหนือหัวบนดาวบริวาร หากจักรวรรดิบริวารทำ §Yข้อตกลง§! ด้วย"
  CLICK_TO_OPEN_PLANET_VIEW_HOLDINGS:0 "§GClick to open Planet View§!"
- AGREEMENTS_HOLDINGS_TITLE:0 "Holdings §Y($CURRENT$/$MAXIMUM$)§!"
+ AGREEMENTS_HOLDINGS_TITLE:0 "การถือครอง §Y($CURRENT$/$MAXIMUM$)§!"
  BUILDING_SLOT_OPEN_AGREEMENTS_HOLDINGS_DESC:0 "§EA Holding can be constructed by the Overlord on one of the Subject's planets.§!"
  AGREEMENT_HOLDINGS_OPEN_CAPITAL_PLANET:0 "§GClick to open Planet View of the empire capital§!"
  HOLDING_RESOURCES_TARGET_COUNTRY:0 "§HFor $COUNTRY|Y$:§!"
@@ -484,7 +484,7 @@
  holding_parasitic_algorithms:0 "Ministry of Science"
  holding_parasitic_algorithms_desc:0 "A ministry overseeing local research and science, bringing the most noteworthy breakthroughs and discoveries back to their benefactor."
  holding_parasitic_algorithms_effect_desc:2 "[Root.ResearchProducerIcon] [Root.ResearchProducer] turn Subject [Root.SubjectResearcherUpkeep] into $r_research$ for the Overlord."
- holding_noble_vacation_homes:0 "Noble Chateaus"
+ holding_noble_vacation_homes:0 "ปราสาทคนชั้นสูง"
  holding_noble_vacation_homes_desc:0 "A home away from home, this is the perfect place for the Overlord's ruling elite to let off steam, so that they don't cause incidents back home."
  holding_noble_vacation_homes_effect:0 "Each $holding_noble_vacation_homes$ grants §G+2§! £stability£ stability in the Overlord's capital."
  holding_dread_outpost:0 "Dread Outpost"
@@ -600,13 +600,13 @@
  SHIP_AURA_BATTLEFIELD_REPAIRS:0 "Bulwark Battlewright Repairs"
  SHIP_AURA_ELECTROMAGNETIC_DISRUPTOR:1 "Electromagnetic Disruptor"
  aura_battlefield_repairs:0 "$SHIP_AURA_BATTLEFIELD_REPAIRS$"
- LOYALTY_CURRENT:0 "Current Loyalty: $VAL|+=0$"
- LOYALTY_NEW:0 "New Loyalty: $VAL|+=0$"
+ LOYALTY_CURRENT:0 "ความภักดีปัจจุบัน: $VAL|+=0$"
+ LOYALTY_NEW:0 "ความภักดีใหม่: $VAL|+=0$"
  LOYALTY_DISCRETE_TERM_TT_ENTRY:0 "$NAME|H$: $VAL|+=0$"
  LOYALTY_RESOURCE_TERM_TT_ENTRY:0 "$NAME|H$: $VAL|+=0$"
  LOYALTY_MONTHLY_DISCRETE_TERM_TT_ENTRY:0 "$NAME|H$: $VAL|+=1$"
  LOYALTY_MONTHLY_RESOURCE_TERM_TT_ENTRY:0 "$NAME|H$: $VAL|+=1$"
- LOYALTY_INITIAL:0 "Initial Loyalty: "
+ LOYALTY_INITIAL:0 "ความภักดีเริ่มต้น: "
  LOYALTY_OPINION:2 "§HRelations§!: $VAL|+=0$"
  LOYALTY_RELATIVE_POWER:1 "§HRelative Power§!: $VAL|+=0$"
  LOYALTY_AGREEMENT_TERMS_HEADER:0 "$TERMS_HEADER$"
@@ -614,15 +614,15 @@
  LOYALTY_BREAKDOWN_FLAVOR:0 "§ELoyalty decides the relationship between the two parties in an §HAgreement§!: The §HOverlord§! and their §HSubject§!.§!"
  LOYALTY_MONTHLY_EXTRA_INFO:0 "§ROther factors besides Agreement Terms may impact the final result.§!"
  LOYALTY_MONTHLY_BREAKDOWN_FLAVOR:0 "$LOYALTY_BREAKDOWN_FLAVOR$"
- LOYALTY_BREAKDOWN_HEADER_NEW:0 "§HNew Loyalty§!"
- LOYALTY_BREAKDOWN_HEADER_OLD:0 "§HCurrent Loyalty§!"
+ LOYALTY_BREAKDOWN_HEADER_NEW:0 "§Hความภักดีใหม่§!"
+ LOYALTY_BREAKDOWN_HEADER_OLD:0 "§Hความภักดีปัจจุบัน§!"
  LOYALTY_MONTHLY_TERMS_BREAKDOWN_HEADER_NEW:0 "§HNew Monthly Loyalty from Terms§!"
  LOYALTY_MONTHLY_TERMS_BREAKDOWN_HEADER_OLD:0 "§HCurrent Monthly Loyalty from Terms§!"
  LOYALTY_IMPACT_PER_AGREEMENT_TERM:0 "§HLoyalty impact from this Agreement Term§!"
  MONTHLY_LOYALTY_IMPACT_PER_AGREEMENT_TERM:0 "§HMonthly Loyalty impact from this Agreement Term§!"
- LOYALTY_ACCEPTANCE_FACTOR:0 "Loyalty"
+ LOYALTY_ACCEPTANCE_FACTOR:0 "ความภักดี"
  CURRENT_OVERLORD_RELATIVE_POWER_ACCEPTANCE_FACTOR:0 "Relative Power to Overlord"
- DISLOYALTY_ACCEPTANCE_FACTOR:0 "Disloyalty"
+ DISLOYALTY_ACCEPTANCE_FACTOR:0 "ไม่ความภักดี"
  LOYAL_ACCEPTANCE_FACTOR:0 "Loyal"
  OVERLORD_TITLE_TEXT:0 "เจ้าเหนือหัว"
  SUBJECT_TITLE_TEXT:0 "Subject"
@@ -802,7 +802,7 @@
  mod_job_overlord_manager_add:0 "$job_overlord_manager$ Jobs"
  job_overlord_manager_desc:0 "Middle managers that optimize the behavior of the local white-collar workers to syngerize with the Overlord's long-term corporate trajectory."
  job_overlord_manager_effect_desc:0 "£job_manager£ $job_overlord_manager_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §YUnity§! and £mod_trade_value_add£ §Y$TRADE_VALUE$§! for the Subject, and £unity£ §YUnity§! for the Overlord."
- planet_holdings:0 "Holdings"
+ planet_holdings:0 "การถือครอง"
  planet_overlord_propagandists:0 "Overlord Propagandists"
  planet_overlord_academics:0 "Overlord Academics"
  planet_overlord_traders:0 "Overlord Traders"
@@ -829,7 +829,7 @@
  r_research:0 "£physics£ £society£ £engineering£ §YResearch Points§!"
  r_amenities:0 "£amenities£ §Yความอยู่ดีกินดี§!"
  r_trade_value:0 "£trade_value£ §YTrade Value§!"
- r_loyalty:0 "£loyalty£ §Yความภักดีต่อเดือน§!"
+ r_loyalty:0 "£loyalty£ §Yความภักดีต่อเดือน§!"
  r_rare_crystals:0 "£rare_crystals£ §Y$rare_crystals$§!"
  r_volatile_motes:0 "£volatile_motes£ §Y$volatile_motes$§!"
  r_exotic_gases:0 "£exotic_gases£ §Y$exotic_gases$§!"
