--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -78,7 +78,7 @@
  SUPREMACIST_AGGRESSIVE_FIRST_CONTACT_POLICY:0 "ภาษาที่ใช้ในการติดต่อครั้งแรกแบบดุดันก้าวร้าว"
  SUPREMACIST_NO_AGGRESSIVE_FIRST_CONTACT_POLICY:0 "$SUPREMACIST_AGGRESSIVE_FIRST_CONTACT_POLICY$"
  SUPREMACIST_NO_AGGRESSIVE_FIRST_CONTACT_POLICY_DESC:0 "The [Root.GetName] demand that we have the right to take all necessary measures against unknown threats we may encounter as we travel the stars."
- SUPREMACIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "Oppressive Subjugation Policy"
+ SUPREMACIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
  SUPREMACIST_NO_OPPRESSIVE_SUBJUGATION_POLICY:0 "$SUPREMACIST_OPPRESSIVE_SUBJUGATION_POLICY$"
  SUPREMACIST_NO_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "Our subjects are here to serve us, and they should always know it. Showing leniency towards them will upset the [Root.GetName]."
  XENOIST_PASSIVE_STUDY:0 "ศึกษาต่างดาวทางอ้อม"
@@ -135,7 +135,7 @@
  XENOIST_AGGRESSIVE_FIRST_CONTACT_POLICY:0 "ภาษาที่ใช้ในการติดต่อครั้งแรกแบบดุดันก้าวร้าว"
  XENOIST_NO_AGGRESSIVE_FIRST_CONTACT_POLICY:0 "$XENOIST_AGGRESSIVE_FIRST_CONTACT_POLICY$"
  XENOIST_AGGRESSIVE_FIRST_CONTACT_POLICY_DESC:0 "Failure to legislate against §Yaggression§! towards those we meet in our travels will displease the [Root.GetName] in this age of exploration."
- XENOIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "Oppressive Subjugation Policy"
+ XENOIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
  XENOIST_NO_OPPRESSIVE_SUBJUGATION_POLICY:0 "$XENOIST_OPPRESSIVE_SUBJUGATION_POLICY$"
  XENOIST_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "Our mission should be to bring enlightenment and prosperity to the galaxy. Subjects should be nurtured, and exploiting them will displease the [Root.GetName]."
  XENOIST_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
@@ -183,7 +183,7 @@
  IMPERIALIST_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
  IMPERIALIST_NO_BENEVOLENT_SUBJUGATION_POLICY:0 "$IMPERIALIST_BENEVOLENT_SUBJUGATION_POLICY$"
  IMPERIALIST_BENEVOLENT_SUBJUGATION_POLICY_DESC:0 "The strong rule; the weak serve. Showing compassion towards our subjects will upset the [Root.GetName]."
- IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "Oppressive Subjugation Policy"
+ IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
  IMPERIALIST_ADOPT_OPPRESSIVE_SUBJUGATION_POLICY:0 "$IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY$"
  IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "An iron fist in an iron glove. Making sure that our subjects know their place will please the [Root.GetName]."
  ISOLATIONIST_PHILOSOPHY:0 "การป้องกันที่แข็งแกร่ง"
@@ -273,7 +273,7 @@
  TRADITIONALIST_PSIONIC_PURSUIT:2 "การแสวงหาพลังจิต"
  TRADITIONALIST_NO_PSIONIC_PURSUIT:1 "$TRADITIONALIST_PSIONIC_PURSUIT$"
  TRADITIONALIST_PSIONIC_PURSUIT_DESC:2 "Adopting the §Yจิตอยู่เหนือสรรพสิ่ง§! Ascension Perk will please the [Root.GetName]."
- TRADITIONALIST_PSIONIC_TEACHINGS:0 "Psionic Teachings"
+ TRADITIONALIST_PSIONIC_TEACHINGS:0 "สอนพลังจิต"
  TRADITIONALIST_NO_PSIONIC_TEACHINGS:0 "$TRADITIONALIST_PSIONIC_TEACHINGS$"
  TRADITIONALIST_PSIONIC_TEACHINGS_DESC:0 "Researching the £society£ §Y$tech_psionic_theory$§! Technology will please the [Root.GetName]."
  TRADITIONALIST_SHROUD_BOON:0 "ห่อสิ่งที่ดี"
@@ -288,7 +288,7 @@
  TRADITIONALIST_RELIGIOUS_FINDING:0 "ความสบายกายสบายใจในอดีต"
  TRADITIONALIST_NO_RELIGIOUS_FINDING:0 "$TRADITIONALIST_RELIGIOUS_FINDING$"
  TRADITIONALIST_RELIGIOUS_FINDING_DESC:0 "Finding religious significance in Minor Artifacts will please the [Root.GetName] for a time."
- TECHNOLOGIST_ROBOTS:0 "Machine Love"
+ TECHNOLOGIST_ROBOTS:0 "รักเครื่องจักร"
  TECHNOLOGIST_ROBOTS_DESC:0 "Maintaining a population of at least §Y6§! Robotic Pops will please the [Root.GetName]."
  TECHNOLOGIST_FEW_ROBOTS:0 "$TECHNOLOGIST_ROBOTS$"
  TECHNOLOGIST_ROBOTS_ALLOWED:0 "อนุญาตให้ใช้ AI"
@@ -324,7 +324,7 @@
  PROGRESSIVE_REPRODUCTIVE_FREEDOM:0 "เสรีภาพในการสืบพันธุ์"
  PROGRESSIVE_REPRODUCTIVE_FREEDOM_DESC:2 "Banning the use of selective Population Controls will please the [Root.GetName]."
  PROGRESSIVE_NO_REPRODUCTIVE_FREEDOM:1 "$PROGRESSIVE_REPRODUCTIVE_FREEDOM$"
- PROGRESSIVE_SLAVERY_BANNED:1 "Slavery Ban"
+ PROGRESSIVE_SLAVERY_BANNED:1 "แบนทาส"
  PROGRESSIVE_SLAVERY_BANNED_DESC:1 "Failing to ban the practice of Slavery will displease the [Root.GetName]."
  PROGRESSIVE_SLAVERY_ALLOWED:0 "อนุญาตให้มีทาส"
  PROGRESSIVE_NO_STRATIFIED:0 "ต่อต้านการแบ่งชนชั้น"
@@ -333,7 +333,7 @@
  PROGRESSIVE_NO_ELITISM:0 "เกิดมาเท่าเทียมกัน"
  PROGRESSIVE_NO_ELITISM_DESC:0 "Refraining from enacting Policies that favor the ruling elite will please the [Root.GetName]."
  PROGRESSIVE_ELITISM:0 "$PROGRESSIVE_NO_ELITISM$"
- PROGRESSIVE_SOCIAL_EQUALITY:0 "Equal Citizenry"
+ PROGRESSIVE_SOCIAL_EQUALITY:0 "เป็นพลเมืองที่เท่าเทียมกัน"
  PROGRESSIVE_SOCIAL_EQUALITY_DESC:0 "Ensuring that all species in our empire enjoy Full Citizenship status will please the [Root.GetName]."
  PROGRESSIVE_NO_SOCIAL_EQUALITY:0 "$PROGRESSIVE_SOCIAL_EQUALITY$"
  PROGRESSIVE_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
@@ -372,7 +372,7 @@
  TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
  TOTALITARIAN_NO_BENEVOLENT_SUBJUGATION_POLICY:0 "$TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY$"
  TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY_DESC:0 "A firm [Owner.Species.GetHandName] is required to guide our subjects, lest they grow indolent and complacent. Granting them too many liberties will displease the [Root.GetName]."
- TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY:0 "Oppressive Subugation Policy"
+ TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY:0 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
  TOTALITARIAN_ADOPT_OPPRESSIVE_SUBJUGATION_POLICY:0 "$TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY$"
  TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "Like [Owner.Species.GetSpawnNamePlural], our subjects need guidance if they are to learn discipline. Keeping them on a short leash will please the [Root.GetName]."
  PROSPERITY_PHILOSOPHY:0 "ท่าทีป้องกัน/ตั้งรับ"
