--- a/mod/thmod/localisation/english/situations_l_english.yml
+++ b/mod/thmod/localisation/english/situations_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
- FROM_SITUATIONS:0 "From Situations"
- TO_TARGET:1 "To $TARGET|H$:"
- SITUATION_MONTHLY_CHANGE:0 "Monthly Change"
+ FROM_SITUATIONS:0 "จากสถานการณ์ต่างๆ"
+ TO_TARGET:1 "ไปที่ $TARGET|H$:"
+ SITUATION_MONTHLY_CHANGE:0 "การเปลี่ยนแปลงรายเดือน"
  NO_ACTIVE_EFFECTS:1 "No active effects"
  SITUATION_FINISHER_EFFECTS:0 "§EFinisher Effects:§!"
  SITUATION_FINISHER_EFFECTS_TOOLTIP:0 "§HEffects if the predicted outcome is reached§!"
@@ -318,7 +318,7 @@
  approach_advance:0 "Advance"
  approach_outcome_tooltip:0 "This Approach will advance the Situation towards a certain outcome."
  string_gravitational_pull:0 "Gravitational Pull"
- country_situations:0 "Situations"
+ country_situations:0 "สถานการณ์"
  mod_country_situations_sr_dark_matter_produces_add:0 "$mod_country_base_sr_dark_matter_produces_add$"
  mod_country_situations_physics_research_produces_add:0 "Monthly £physics_research£ Physics Research"
  mutiny_tooltip:1 "We have lost control of the space station."
@@ -466,8 +466,8 @@
  financial_advisors_egalitarian_upper:0 "The Association of Financial Fairness"
  financial_advisors_hive_upper:0 "Our Materiel Logistic Node"
  financial_advisors_machine_upper:0 "Our Resource Allocation Subroutine"
- planet_buildings_hab_capital:0 "Habitat Administration"
- mod_planet_buildings_hab_capital_upkeep_mult:0 "Habitat Administration Upkeep"
+ planet_buildings_hab_capital:0 "ศูนย์บริหารและที่อยู่อาศัย (เมืองหลวง)"
+ mod_planet_buildings_hab_capital_upkeep_mult:0 "ค่าบำรุงรักษาศูนย์บริหารและที่อยู่อาศัย"
  deficit.100.name:0 "Spiralling Deficits"
  deficit.100.desc:0 "Our energy deficit is out of control! [Owner.GetFinancialAdvisorAgencyCap] demands that we take drastic action to take hold of the situation, failing which severe cutbacks will be necessary in a matter of months."
  deficit.100.desc.gestalt:0 "Our energy deficit is out of control! Our resource distribution drones are increasingly agitated at the readings they measure on the health of our supply lines. They forecast that drastic cutbacks will be necessary in a matter of months unless significant action is taken."
