--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -188,8 +188,8 @@
  HAS_NOT_NUM_OWNED_LEADERS:0 "Number of owned leaders is NOT $COMPARATOR$ $NUM|Y$"
  HAS_FREE_JOBS:0 "จำนวนงานที่ว่าง $COMPARATOR$ $NUM|Y$"
  HAS_NOT_FREE_JOBS:0 "จำนวนงานที่ว่างไม่ $COMPARATOR$ $NUM|Y$"
- HAS_UNEMPLOYED:0 "Number of Unemployed Pops is $COMPARATOR$ $NUM|Y$"
- HAS_NOT_UNEMPLOYED:0 "Number of Unemployed Pops is NOT $COMPARATOR$ $NUM|Y$"
+ HAS_UNEMPLOYED:0 "จำนวนประชากรที่ว่างงาน $COMPARATOR$ $NUM|Y$"
+ HAS_NOT_UNEMPLOYED:0 "จำนวนประชากรที่ว่างงาน ไม่$COMPARATOR$ $NUM|Y$"
  HAS_NUM_POPS:0 "จำนวนประชากร $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_POPS:0 "จำนวนประชากรไม่ $COMPARATOR$ $NUM|Y$"
  HAS_NUM_SAPIENT_POPS:0 "Number of sapient Pops is $COMPARATOR$ $NUM|Y$"
@@ -368,12 +368,12 @@
  IS_NOT_DEFENSIVE_ARMY:0 "Is an Assault Army"
  HAS_ARMY:0 "Has army"
  HAS_NO_ARMY:0 "Has no army"
- HAS_DEPOSIT:0 "Has deposit"
- HAS_NO_DEPOSIT:0 "Has no deposit"
+ HAS_DEPOSIT:0 "มีแหล่งทรัพยากร"
+ HAS_NO_DEPOSIT:0 "ไม่มีแหล่งทรัพยากร"
  IS_DEPOSIT_TYPE:0 "Is $TYPE|H$"
  IS_NOT_DEPOSIT_TYPE:0 "Is NOT $TYPE|H$"
- HAS_DEPOSIT_TYPE:0 "Has deposit $TYPE|H$"
- HAS_NO_DEPOSIT_TYPE:0 "Has no deposit $TYPE|H$"
+ HAS_DEPOSIT_TYPE:0 "แหล่งทรัพยากร $TYPE|H$"
+ HAS_NO_DEPOSIT_TYPE:0 "ไม่มีแหล่งทรัพยากร $TYPE|H$"
  HAS_DEPOSIT_CATEGORY:0 "Has deposit category $CAT|H$"
  HAS_NOT_DEPOSIT_CATEGORY:0 "Has NOT deposit category $CAT|H$"
  IS_STARTING_SYSTEM:0 "Is Starting System"
@@ -487,7 +487,7 @@
  HAS_NOT_ANY_RESOURCE_TRIGGER:0 "ไม่มีทรัพยากร $COMPARE$ $VALUE|Y$"
  ANY_NEIGHBORING_TILE_TRIGGER:0 "Any Neighboring Tile"
  ANY_TILE_TRIGGER:0 "Any Tile"
- ANY_DEPOSIT_TRIGGER:0 "Any Deposit"
+ ANY_DEPOSIT_TRIGGER:0 "แหล่งทรัพยากรใดๆ"
  HAS_BLOCKER_TRIGGER:0 "Has £blocker£ Tile Blocker: $BLOCKER|Y$"
  HAS_NOT_BLOCKER_TRIGGER:0 "Does NOT have £blocker£ Tile Blocker: $BLOCKER|Y$"
  FREE_HOUSING_TRIGGER:0 "ที่อยู่อาศัยที่มีอยู่ $COMPARE$ $VALUE|Y$"
@@ -738,8 +738,8 @@
  IS_ESPIONAGE_OPERATION_DIFFICULTY_TRIGGER:0 "Chapter difficulty $COMPARE$ $NUM_COMPARE$"
  IS_NOT_ESPIONAGE_OPERATION_CHAPTER_TRIGGER:0 "Current chapter is NOT $COMPARE$ $NUM_COMPARE$"
  IS_ESPIONAGE_OPERATION_CHAPTER_TRIGGER:0 "Current chapter is $COMPARE$ $NUM_COMPARE$"
- IS_NOT_ESPIONAGE_OPERATION_DAYS_LEFT_TO_ROLL_TRIGGER:0 "Days left until new die roll NOT $COMPARE$ $NUM_COMPARE$"
- IS_ESPIONAGE_OPERATION_LEFT_TO_ROLL_TRIGGER:0 "Days left until new die roll $COMPARE$ $NUM_COMPARE$"
+ IS_NOT_ESPIONAGE_OPERATION_DAYS_LEFT_TO_ROLL_TRIGGER:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้าใหม่ ไม่$COMPARE$ $NUM_COMPARE$"
+ IS_ESPIONAGE_OPERATION_LEFT_TO_ROLL_TRIGGER:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้าใหม่ $COMPARE$ $NUM_COMPARE$"
  HAS_NOT_NUM_COUNTRIES:0 "Number of Empires is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_COUNTRIES:0 "Number of Empires is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_POP_PERCENTAGE:0 "Number of Pops is NOT $COMPARATOR$ $NUM|Y%$"
@@ -823,8 +823,8 @@
  IS_FRIENDLY_TO_TOOLTIP:0 "Is Friendly towards $TARGET|Y$."
  IS_NOT_PROTECTIVE_TO_TOOLTIP:0 "Is NOT Protective towards $TARGET|Y$."
  IS_PROTECTIVE_TO_TOOLTIP:0 "Is Protective towards $TARGET|Y$."
- IS_NOT_THREATENED_TO_TOOLTIP:0 "Is NOT Threatened by $TARGET|Y$."
- IS_THREATENED_TO_TOOLTIP:0 "Is Threatened by $TARGET|Y$."
+ IS_NOT_THREATENED_TO_TOOLTIP:0 "ไม่ถูกคุกคามโดย $TARGET|Y$"
+ IS_THREATENED_TO_TOOLTIP:0 "ถูกคุกคามโดย $TARGET|Y$"
  IS_NOT_UNFRIENDLY_TO_TOOLTIP:0 "Is NOT Unfriendly towards $TARGET|Y$."
  IS_UNFRIENDLY_TO_TOOLTIP:0 "Is Unfriendly towards $TARGET|Y$."
  IS_NOT_CORDIAL_TO_TOOLTIP:0 "Is NOT Cordial towards $TARGET|Y$."
@@ -993,7 +993,7 @@
  SET_ASTEROID_BELT_EFFECT:0 "Asteroid belt set in $SYSTEM$ at the distance of $DISTANCE|0$"
  REMOVED_ASTEROID_BELT_EFFECT:0 "Removed asteroid belt in $SYSTEM$"
  REMOVE_PLANET:0 "Removed planet $PLANET$"
- REMOVE_ARMY_EFFECT:0 "Remove Army\n"
+ REMOVE_ARMY_EFFECT:0 "ลบกองทัพ\n"
  REMOVE_ARMIES_EFFECT:0 "ลบกองทัพทั้งหมด"
  DEFAULT_SENDEVENT_EVENTOPTION_TOOLTIP:0 ""
  ALL_PLANETS:0 "All System Planets"
@@ -1023,8 +1023,8 @@
  ADD_ENGINEERING_RESEARCH_EFFECT:0 "$VALUE$ Engineering research\n"
  ADD_MODIFIER:0 "$MODNAME|Y$ ถูกเพิ่ม ซึ่งให้ผลดังนี้: \n$EFFECT$\n"
  ADD_MODIFIER_DAYS:0 "$MODNAME|Y$ จะมีผลเป็นระยะเวลา $TIME|Y$ $PERIOD$ ซึ่งให้ผลดังนี้:\n$EFFECT$\n"
- ADD_OPINION_MODIFIER:1 "$SCOPE|Y$'s opinion of $COUNTRY|Y$ changes by $VALUE$.\n"
- REMOVE_OPINION_MODIFIER:1 "$SCOPE|Y$'s opinion of $COUNTRY|Y$ changes by $VALUE$.\n"
+ ADD_OPINION_MODIFIER:1 "ทัศนคติ $SCOPE|Y$ ต่อ $COUNTRY|Y$ เปลี่ยนไป $VALUE$\n"
+ REMOVE_OPINION_MODIFIER:1 "ทัศนคติ $SCOPE|Y$ ต่อ $COUNTRY|Y$ เปลี่ยนไป $VALUE$\n"
  REMOVE_OPINION_MODIFIER_ANY:1 "$SCOPE|Y$ removes the $MODNAME|Y$ opinion modifier towards anyone\n"
  ADD_TRUST:0 "$SCOPE|Y$'s trust towards $COUNTRY|Y$ changes by $AMOUNT$."
  THE_EMPIRE:0 "our Empire!"
@@ -1139,7 +1139,7 @@
  DISMANTLE_EFFECT:0 "The station is dismantled.\n"
  ACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is added"
  DEACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is removed"
- BEGIN_EVENT_CHAIN_EFFECT:0 "Begins the $NAME$ Event Chain\n\n"
+ BEGIN_EVENT_CHAIN_EFFECT:0 "เริ่มเหตุการณ์ $NAME$\n\n"
  END_EVENT_CHAIN_EFFECT:0 "Ends the $NAME$ Event Chain\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ shifts its ethics towards $ETHIC|Y$\n"
  ADD_ETHIC_EFFECT:0 "\nได้รับจริยธรรม $ETHIC|Y$\n"
@@ -1156,27 +1156,27 @@
  ADD_EVENT_CHAIN_COUNTER_EFFECT:0 "+$AMOUNT|Y$ $COUNTER$\n"
  ADD_ANOMALY_EFFECT:0 "Add an Anomaly\n"
  SET_DISABLE_AT_HEALTH_EFFECT:0 "Will be disabled upon reaching $VALUE|%Y$ Health"
- ADD_DEPOSIT_EFFECT:1 "Add $DEPOSIT|Y$ to $PLANET|Y$\n"
+ ADD_DEPOSIT_EFFECT:1 "เพิ่ม $DEPOSIT|Y$ ไปที่ $PLANET|Y$\n"
  ADD_RANDOM_DEPOSIT_EFFECT:1 "Add a random deposit to $PLANET|Y$\n"
- REMOVE_DEPOSIT_EFFECT:1 "Remove $DEPOSIT|Y$ from $PLANET|Y$\n"
+ REMOVE_DEPOSIT_EFFECT:1 "ลบ $DEPOSIT|Y$ ออกจาก $PLANET|Y$\n"
  CLEAR_DEPOSITS_EFFECT:1 "All Planetary Features are removed\n"
  CLEAR_BLOCKERS_EFFECT:1 "All Blockers are cleared\n"
  CLEAR_BLOCKER_EFFECT:1 "Clear a $DEPOSIT|Y$ Blocker\n"
  ORBITAL_DEPOSIT_TILE:0 "Orbital Deposit Tile"
  ADD_BUILDING_CONSTRUCTION_EFFECT:0 "Add construction of $BUILDING|Y$"
  SET_BUILDING_EFFECT:0 "Set Building to $BUILDING|Y$"
- ADD_BUILDING_EFFECT:1 "Add £building£ $BUILDING|Y$ to Planet"
- REMOVE_BUILDING_EFFECT:0 "Remove Building"
+ ADD_BUILDING_EFFECT:1 "เพิ่ม £building£ $BUILDING|Y$ ไปที่ดาวเคราะห์"
+ REMOVE_BUILDING_EFFECT:0 "ลบสิ่งปลูกสร้าง"
  REMOVE_ALL_BUILDINGS_EFFECT:1 "ลบสิ่งปลูกสร้างทั้งหมด"
  DOWNGRADE_ALL_BUILDINGS_EFFECT:0 "Downgrade all non-capital buildings"
  DOWNGRADE_ALL_BUILDINGS_OF_TYPE_EFFECT:0 "Downgrade all $TYPE$ buildings"
- REMOVE_SPECIFIC_BUILDING_EFFECT:0 "Remove $BUILDING|Y$"
+ REMOVE_SPECIFIC_BUILDING_EFFECT:0 "ลบ $BUILDING|Y$"
  RUIN_SPECIFIC_BUILDING_EFFECT:0 "Disable $BUILDING|Y$"
  DISABLE_SPECIFIC_BUILDING_EFFECT:0 "Ruin $BUILDING|Y$"
- ADD_DISTRICT_EFFECT:0 "Add $DISTRICT|Y$ to Planet"
- REMOVE_DISTRICT_EFFECT:0 "Remove District"
+ ADD_DISTRICT_EFFECT:0 "เพิ่ม $DISTRICT|Y$ ไปที่ดาวเคราะห์"
+ REMOVE_DISTRICT_EFFECT:0 "ลบเขต"
  REMOVE_ALL_DISTRICTS_EFFECT:1 "ลบเขตทั้งหมด"
- REMOVE_SPECIFIC_DISTRICT_EFFECT:0 "Remove $DISTRICT|Y$"
+ REMOVE_SPECIFIC_DISTRICT_EFFECT:0 "ลบ $DISTRICT|Y$"
  CHANGE_PLANET_SIZE:1 "Planet Size of $PLANET|Y$: $VALUE|Y$"
  SET_PLANET_SIZE:0 "Change the size to: $VALUE|Y$"
  SET_BLOCKER_EFFECT:0 "Set Blocker: $BLOCKER|Y$"
@@ -1224,8 +1224,8 @@
  NUM_MEMBERS_NOT:0 "$FEDERATION|Y$ does NOT have $COMPARATOR$ $VALUE|Y$ members"
  NUM_ASSOCIATES:0 "$FEDERATION|Y$ has $COMPARATOR$ $VALUE|Y$ associates"
  NUM_ASSOCIATES_NOT:0 "$FEDERATION|Y$ does NOT have $COMPARATOR$ $VALUE|Y$ associates"
- LEADER_GENDER_TRIGGER:0 "$LEADER|Y$ is $GENDER|Y$"
- LEADER_NOT_GENDER_TRIGGER:0 "$LEADER|Y$ is NOT $GENDER|Y$"
+ LEADER_GENDER_TRIGGER:0 "$LEADER|Y$ เป็น $GENDER|Y$"
+ LEADER_NOT_GENDER_TRIGGER:0 "$LEADER|Y$ ไม่เป็น $GENDER|Y$"
  SPECIES_GENDER_TRIGGER:0 "Species has $GENDER|Y$ gender"
  SPECIES_NOT_GENDER_TRIGGER:0 "Species does NOT have $GENDER|Y$ gender"
  POP_NOT_MEMBER_OF_ANY_FACTION_TRIGGER:0 "$POP|Y$ is NOT in any Pop Faction"
@@ -1745,7 +1745,7 @@
  DESTROY_ESPIONAGE_ASSET:1 "Destroy $TYPE|Y$ espionage asset"
  ASSIGN_ESPIONAGE_ASSET:1 "Assign $TYPE|Y$ espionage asset"
  UNASSIGN_ESPIONAGE_ASSET:1 "Unassign $TYPE|Y$ espionage asset"
- SET_POLICY:0 "Policy on $POLICY_GROUP|Y$ is set to $OPTION|Y$"
+ SET_POLICY:0 "นโยบาย $POLICY_GROUP|Y$ ตั้งค่าเป็น $OPTION|Y$"
  CAN_SET_POLICY_TRIGGER:0 "Can set Policy on $POLICY_GROUP|Y$ to $OPTION|Y$"
  CAN_NOT_SET_POLICY_TRIGGER:0 "Cannot set Policy on $POLICY_GROUP|Y$ to $OPTION|Y$"
  CAN_WORK_SPECIFIC_WORK_TYPE_TRIGGER:1 "Can take any $JOB$ job which becomes available."
