--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -49,10 +49,10 @@
  ap_master_builders_habitat_size:2 "§Hที่อยู่อาศัยในอวกาศ§! ของจักรวรรดิเราจะมีที่ว่างเพิ่มเติมอีก §Y2§! เขต"
  allow_edict_consectrated_worlds:5 "§Hปลดล็อกการตัดสินใจ:§! โลกศักดิ์สิทธิ์\n"
  describe_edict_consectrated_worlds:5 "§EConsecrating uninhabited planets (up to §Y3§!) increases §YSpiritualist Ethics Attraction§! and §YEmpire-Wide Amenities§! as well as £unity£ §YUnity Generation§!, scaling to the spiritual significance of the worlds consecrated.§!"
- allow_machine_worlds:2 "§HUnlocks Terraforming Option:§! โลกเครื่องจักร"
- describe_machine_worlds:6 "§YMachine Worlds§! are a special planet class that is uninhabitable for most organics, but are not limited by Planetary Features in how many £district£ §YGenerator§! and §YMining Districts§! they can support. £pop£ §YPops§! living on §YMachine Worlds§! have their §YResource Output§! increased by §G+10%§! and §YHousing Usage§! reduced by §G10%§!. Any existing £district£ §YAgriculture Districts§! on the planet will be destroyed."
+ allow_machine_worlds:2 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกเครื่องจักร"
+ describe_machine_worlds:6 "- §Yโลกเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
  allow_hive_worlds:0 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกที่เป็นรัง"
- describe_hive_worlds:1 "§YHive Worlds§! are a special planet class that is uninhabitable for non-Hive Minded Pops, but are not limited by Planetary Features in how many £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§! they can support, and §YHive Districts§! are more efficient. £pop£ §YPops§! living on §YHive Worlds§! have their §YResource Output§! increased by §G+10%§!."
+ describe_hive_worlds:1 "- §Yโลกที่เป็นรัง§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อประชากรที่ไม่ใช่สิ่งมีชีวิตจิตสำนึกร่วม แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! และ §Yเขตรัง§! มีประสิทธิภาพมากขึ้น\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวที่เป็นรัง§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§!"
  ALLOW_PSI_CORPS:0 "The §H$building_psi_corps$§! building is now available."
  ALLOW_PSI_ARMIES:0 "§H$psionic_army_plural$§! can now be recruited."
  dyson_sphere_0_MEGASTRUCTURE_DETAILS:1 "A §Y$dyson_sphere_5$§! fully envelops a given star, converting all solar output directly to £energy£ Energy Credits."
