--- a/mod/thmod/localisation/english/events_2_l_english.yml
+++ b/mod/thmod/localisation/english/events_2_l_english.yml
@@ -404,6 +404,7 @@
  anomaly.3035.b:0 "Typical."
  anomaly.3040.name:0 "Pirate Exiles"
  anomaly.3040.desc:0 "What was thought to be a cluster of minerals are the metal hulls of two alien corvettes, stealthily drifting through the asteroid belt.\n\nScience Officer [Root.GetLeaderName] established contact, and the two ships are crewed by alleged former pirates, now cast out from their robber-clan. They have heard whispers that [Root.Owner.GetRulerTitle] [Root.Owner.GetRulerName] of the [Root.Owner.GetName] is a champion of the people, and seek asylum."
+ anomaly.3040.desc.fallback:0 "What was thought to be a cluster of minerals are the metal hulls of two alien corvettes, stealthily drifting through the asteroid belt.\n\nScience Officer [Root.GetLeaderName] established contact, and the two ships are crewed by alleged former pirates, now cast out from their robber-clan. Curiously, they believe that we will be well-disposed towards them, and are seeking asylum."
  anomaly.3040.a:0 "They can make themselves useful."
  anomaly.3040.a.tooltip:0 "Enlist the exiled pirates and gain two §YCorvette§!-class ships."
  anomaly.3040.b:0 "We do not need their services. Take what they have but their lives."
@@ -1431,7 +1432,7 @@
  fallen_machine_empire.2.desc_01:1 "Active Sterilization Hub detected. Reactivation protocols engaged. Attempting to contact Central Processing... §R<<ERROR: SUBSPACE LINK OFFLINE>>§!\n\nCentral Processing unreachable. Querying processing units... processing at §Y4.1853%§! of standard capacity. Abort full reactivation process. Engaging fallback protocols... powering shipyards... activating war assets...\n\nFinal Defense Directive activated. Recorded message follows:\n§HSapient! We are the [From.GetSpeciesName]. Long ago we fought the Corruption, that which you call the Contingency. We thought ourselves superior, undefeatable. Time and again we fought them back, time and again they returned, sterilizing worlds and wearing down our mighty fleets. We embarked on a campaign to defeat them once and for all together with what remained of the biological civilizations of our time.\n\nIf you are hearing this message, then we have failed. Whatever remains of our great civilization we bequeath to you, our successors, in your own battle to come. Do not make our mistake! Destroy the Nexus! End this menace once and for all! The future of the galaxy depends on it.§!"
  fallen_machine_empire.2.desc_02:0 "Active Sterilization Hub detected. Reactivation protocols engaged. Attempting to contact Central Processing... §Y<WARNING: CORRUPTED SIGNAL LINK DETECTED>§!\n\nEngaging countermeasures... §R<<ERROR: PROCESSING CAPACITY FAILURE>> <<ERROR: COUNTERMEASURE FAILURE>> §R<<CRITICAL WARNING: SYSTEM CORRUPTION DETECTED>>§! <<ERROR: SECONDARY COUNTERMEASURE FAILURE>>§!\n\nEngag... eng... e... eeee... §R<<ERROR>> <<ERROR>> <<ERROR>> <<ERROR>> <<ERROR>>§!\n\n§R<<ERROR>> <<ERROR>> <<ERROR>> <<ERROR>> <<ERROR>>§!"
  fallen_machine_empire.2.a:0 "น่าสนใจ..."
- fallen_machine_empire.2.b:0 "Worrying..."
+ fallen_machine_empire.2.b:0 "กังวล..."
  fallen_machine_empire.4.name:0 "Vigil's End"
  fallen_machine_empire.4.desc:0 "At the very moment that the last Contingency Machine World self-destructed, our instruments detected a subspace signal of immense strength. The signal originated from §H[From.GetName]§! space and appears to have been aimed towards the galactic core. Over the next few hours, scattered reports came in of [From.GetAdjective] fleets vanishing from sensors, entering jump points to familiar systems but never emerging on the other side.\n\nA scout vessel near [From.GetSpeciesName] space was sent to investigate, and reported back startling findings: The ancient machine intelligence has disappeared entirely, leaving behind only abandoned orbital stations and decaying megastructures.\n\nWhere they have gone to is a mystery we may never solve, but one thing is clear: The task that the [From.GetSpeciesName] set for themselves in ages past is now complete, and their ancient vigil is finally at an end."
  fallen_machine_empire.11.name:0 "การติดต่อจาก §H[FallenEmpireTaskOrigin.GetName]§!"
@@ -1677,7 +1678,7 @@
  nomad.511.e:0 "We will take them for £minerals£ §Y2000§!."
  nomad.511.b:0 "Lower your price."
  nomad.511.c:0 "We cannot afford that."
- nomad.511.d:0 "No deal."
+ nomad.511.d:0 "ไม่ตกลง"
  nomad.512.desc:0 "We know what our creations are worth, orb-dweller. We do not ask for much."
  nomad.513.b:0 "We will happily ease your burden for £energy£ §Y1500§!."
  nomad.513.c:0 "We still cannot afford it."
@@ -1703,7 +1704,7 @@
  nomad.522.e:0 "Not interested."
  nomad.523.desc:0 "We would need something to show for it. Even £energy£ §Y1000§! would be more than whatever the fleet would get out of the [other_empire.GetAdj] orb-dwellers."
  nomad.523.c:0 "Deal."
- nomad.523.a:0 "No deal."
+ nomad.523.a:0 "ไม่ตกลง"
  nomad.523.b:0 "We cannot afford that."
  nomad.524.desc:1 "Shade upon you, [Root.GetRulerName]. The ships will arrive at the appointed time - all of them. Fair winds."
  nomad.524.a:0 "สิ้นสุดการส่ง"
