--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -61,7 +61,7 @@
  trait_plantoid_budding_desc:0 "§Lเผ่าพันธุ์นี้มีความสามารถในการขยายพันธุ์โดยการแตกหน่อ นอกเหนือจากการปฏิสนธิของเมล็ดหรือสปอร์ตามปกติ§!"
  trait_lithoid_budding:0 "Crystallization"
  trait_lithoid_budding_desc:0 "§LWith crystalline growths, this species is capable of generating self replicating lattices of themselves, in addition to the more usual reproductive methods.§!"
- TRAIT_PLANTOID_BUDDING_EFFECT:1 "Each pop working as a slave or better produces 0.02 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ TRAIT_PLANTOID_BUDDING_EFFECT:1 "แต่ละประชากรที่ทำงานเป็นทาสหรือสูงกว่าจะผลิต £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! 0.02\n\nโบนัสที่เพิ่มขึ้นนี้จะไปเพิ่ม$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$กับแหล่งอื่นๆได้อีกด้วย เช่น £building£ §H$building_clone_vats$§! หรือ £job_spawning_drone£ §H$job_spawning_drone_plural$§!"
  TRAIT_LITHOID_BUDDING_EFFECT:0 "$TRAIT_PLANTOID_BUDDING_EFFECT$\n\nThe §H$trait_lithoid$ Trait§! modifies this trait's effects."
  civic_catalytic_processing:0 "ตัวเร่งปฏิกิริยาแปรสภาพ"
  civic_catalytic_processing_desc:0 "By focusing their industrial efforts on catalytic chemistry, this civilization has unlocked the key to using organic materials in the construction of spacebound structures."
