--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -128,7 +128,7 @@
  tr_domination_divergence_supression_delayed:0 "Occasionally our unity is disrupted by a rogue drone. This threat has increased as we spread out across the stars. Purging and recycling these units gives them a chance to contribute to the hive with their deaths, in a way they could not with their lives."
  tr_domination_finish:0 "วัฒนธรรมการปกครองสำเร็จ"
  tr_domination_federations_finish:0 "$tr_domination_finish$"
- tr_domination_federations_finish_desc:0 "$MOD_EMPIRE_SIZE_POPS_MULT$ §G-10%§!\nGrants access to the §Y$hegemony_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
+ tr_domination_federations_finish_desc:0 "$MOD_EMPIRE_SIZE_POPS_MULT$ §G-10%§!\nสามารถเข้าถึงสหพันธ์ประเภท §Y$hegemony_federation$§!ได้\nปลดล็อกการยกระดับ: §G+1§!"
  tradition_harmony:0 "ความปรองดอง"
  tradition_harmony_desc:0 "มีบางสิ่งที่สามารถจับประเด็นความต้องการของประชาชนมาทำงานเพื่อเป้าหมายร่วมกัน"
  tr_harmony_adopt:0 "วัฒนธรรมความปรองดอง"
@@ -368,7 +368,7 @@
  tr_discovery_faith_in_science_hive_delayed:0 "Through strategic application of synaptic transmitters, we can broadcast the will of the Hive across an entire planet from orbit."
  tr_discovery_finish:0 "วัฒนธรรมการค้นพบสำเร็จ"
  tr_discovery_federations_finish:0 "$tr_discovery_finish$"
- tr_discovery_federations_finish_desc:0 "$MOD_COUNTRY_ALL_TECH_RESEARCH_SPEED$: §G+10%§!\nGrants access to the §Y$research_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
+ tr_discovery_federations_finish_desc:0 "$MOD_COUNTRY_ALL_TECH_RESEARCH_SPEED$: §G+10%§!\nสามารถเข้าถึงสหพันธ์ประเภท §Y$research_federation$§! ได้\nปลดล็อกการยกระดับ: §G+1§!"
  tradition_prosperity:0 "ความเจริญ"
  tradition_prosperity_desc:0 "ไม่มีตัวบ่งชี้ความสำเร็จหรือความล้มเหลวของประเทศ(ดาว) ที่ดีไปกว่าความแข็งแกร่งทางเศรษฐกิจ"
  tradition_prosperity_machine_desc:0 "ในที่สุดแต่ละหน่วยก็หยุดฟังก์ชันการทำงานเนื่องจากตัวเลขบางอย่าง ตัวเลขเท่านั้นที่จะสามารถบอกได้ว่าควรมีอยู่ต่อไปหรือไม่ ในการสร้างตัวเลขกล่าว เราต้องมีทรัพยากร"
@@ -429,7 +429,7 @@
  tr_mercantile_adopt:0 "วัฒนธรรมการค้า"
  tr_mercantile_finish:0 "วัฒนธรรมการค้าสำเร็จ"
  tr_mercantile_federations_finish:0 "$tr_mercantile_finish$"
- tr_mercantile_federations_finish_desc:0 "$MOD_TRADE_VALUE_MULT$: §G+10%§!\nGrants access to the §Y$trade_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
+ tr_mercantile_federations_finish_desc:0 "$MOD_TRADE_VALUE_MULT$: §G+10%§!\nสามารถเข้าถึงสหพันธ์ประเภท §Y$trade_federation$§! ได้\nปลดล็อกการยกระดับ: §G+1§!"
  tr_mercantile_marketplace_of_better_ideas:0 "ตลาดกลางรวบรวมไอเดียดีๆ"
  tr_mercantile_marketplace_of_better_ideas_delayed:0 "The best ideas are born from exposure to the marketplace. The more exposure, the better the ideas!"
  tr_mercantile_insider_trading:0 "การซื้อขายหลักทรัพย์โดยอาศัยข้อมูลวงใน"
@@ -464,7 +464,7 @@
  tr_subterfuge_operational_security_delayed:0 "The shift from a planetary to an interplanetary setting has posed unique challenges for our covert operatives. By adapting their training regimen to the demands of the galactic stage, we will be able to remain competitive in this new age."
  tr_subterfuge_operational_security_gestalt_delayed:0 "We are no longer as alone as we once were: a plethora of competing - and potentially hostile - entities now share our galaxy with us. In order to thrive in this new reality, we will have to adapt ourselves to the concept of "covertness" and dedicate a significant part of ourselves to finding out the secrets of others."
  tr_subterfuge_double_agents:0 "สายลับสองหน้า"
- tr_subterfuge_double_agents_effect:0 "Whenever a hostile §YOperation§! targeting us fails, we gain §Y10§! Intel on the spying empire."
+ tr_subterfuge_double_agents_effect:0 "เมื่อใดก็ตามที่ §Yปฏิบัติการ§! ของศัตรูมุ่งเป้ามาที่เราล้มเหลว เราได้รับข้อมูลข่าวกรอง §Y10§! จากจักรวรรดิที่สอดแนม"
  tr_subterfuge_double_agents_delayed:0 "Through creative means of persuasion, we are able to sway even the most devoted of our enemies to contribute to our cause."
  tr_subterfuge_shadow_recruits:0 "สายลับไร้เงา"
  tr_subterfuge_shadow_recruits_delayed:1 "Whereas our enemies merely adopted the shadows, our [Root.GetOperativesLowerPlural] were born in it, molded by it."
@@ -473,7 +473,7 @@
  tr_unyielding_adopt:0 "วัฒนธรรมความแข็งกร้าว"
  tr_unyielding_finish:0 "วัฒนธรรมความแข็งกร้าวสำเร็จ"
  tr_unyielding_federations_finish:0 "$tr_unyielding_finish$"
- tr_unyielding_federations_finish_desc:0 "$MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_MULT$ §G+50%§!\n$mod_starbases_upkeep_mult$ §G-20%§!\nGrants access to the §Y$military_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
+ tr_unyielding_federations_finish_desc:0 "$MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_MULT$ §G+50%§!\n$mod_starbases_upkeep_mult$ §G-20%§!\nสามารถเข้าถึงสหพันธ์ประเภท §Y$military_federation$§! ได้\nปลดล็อกการยกระดับ: §G+1§!"
  tr_unyielding_resistance_is_frugal:0 "ความอดทนนั้นประหยัด"
  tr_unyielding_resistance_is_frugal_desc:1 "£defense_army£ §Yกองทัพป้องกัน§! ตอนนี้สามารถผลิต §Y0.5§! £unity£ เอกภาพ นอกจากนี้ §Y$MOD_ARMY_DEFENSE_HEALTH_MULT$§! เพิ่มขึ้น §G+25%§!"
  tr_unyielding_resistance_is_frugal_hive:0 "$tr_unyielding_resistance_is_frugal$"
@@ -600,14 +600,14 @@
  ap_hive_worlds_desc:0 "เราจะสร้างโลกที่มีชีวิตซึ่งเป็นส่วนหนึ่งของรังเหมือนกับโดรนที่อาศัยอยู่ด้วยกัน"
  ap_shared_destiny:0 "โชคชะตาร่วมกัน"
  ap_shared_destiny_desc:0 "เมื่อเราขึ้นไปจุดที่สูงขึ้นเรื่อยๆเราต้องไม่ทิ้งคนที่รับใช้เราด้วยความภักดี อนาคตอันรุ่งโรจน์ของจักรวรรดิเราหมายถึงการมีโชคชะตาร่วมกันเสมอ"
- ap_shared_destiny_effect:0 "§Yจักรวรรดิที่เป็นบริวาร§! ของคุณไม่ได้รับโทษ $r_loyalty$ จากการที่คุณมีหลายจักรวรรดิบริวาร(เมืองขึ้น)"
+ ap_shared_destiny_effect:0 "คุณไม่ได้รับโทษ $r_loyalty$ ของ §Yจักรวรรดิที่เป็นบริวาร§! ลดลง จากการที่คุณมีหลายจักรวรรดิบริวาร(เมืองขึ้น)"
  ap_world_shaper_desc:0 "การกำหนดรูปร่างและปรับเปลี่ยนระบบนิเวศของโลกทั้งใบให้เป็นอย่างอื่นอย่างระมัดระวังนั้นไม่ได้แตกต่างจากศิลปินที่ปั้นรูปปั้นจากดิน"
  ap_master_builders_desc:0 "การสร้างโครงสร้างขนาดใหญ่ต้องใช้ทรัพยากรและการวางแผนจำนวนมากอย่างไม่เคยปรากฏมาก่อน และเรากำลังเริ่มต้นใหม่ในสาขาวิศวกรรมมหภาค"
  ap_imperial_prerogative_desc:0 "เมื่ออารยธรรมของเราเติบโตขึ้นเรื่อยๆ ดังนั้นการเต้นของหัวใจก็ต้องขยายออกไปด้วย ระบบอื่นๆจะถูกวางไว้ภายใต้การควบคุมโดยตรงของเรา"
  ap_one_vision_desc:0 "เอกภาพที่แท้จริงจะเกิดขึ้นได้ก็ต่อเมื่อเป้าหมายสูงสุดของชาติและประชาชนเป็นหนึ่งเดียวกัน หลังจากนั้นบ้านที่แตกแยกกันเองก็ไม่สามารถยืนหยัดได้"
  ap_consecrated_worlds_desc:0 "กาแล็กซีเป็นที่ตั้งของสถานที่ศักดิ์สิทธิ์หลายแห่งบางแห่งเห็นได้ชัดกว่าที่อื่นๆ ในฐานะปุถุชน เรายังคงต่อสู้เพื่อคาดการณ์พยากรณ์ธรรมชาติที่แท้จริงของจักรวาล"
  ap_galactic_force_projection_desc:0 "กองยานเป็นเครื่องมือที่แสดงเจตจำนงของจักรวรรดิของเรา - เราจะอยู่หรือตายก็ขึ้นอยู่กับกำลังของมัน"
- ap_defender_of_the_galaxy_desc:0 "ในขณะที่ชาติดวงดาวต่างต่อสู้กันในข้อพิพาทเล็กๆน้อยๆ กองกำลังที่น่ากลัวและพลังที่ไม่อาจจินตนาการได้กำลังรวมตัวกันเพื่อต่อสู้กับสิ่งชีวิตค่าทั้งหมด ใครจะปกป้องเรา?"
+ ap_defender_of_the_galaxy_desc:0 "ในขณะที่ชาติดวงดาวต่างต่อสู้กันในข้อพิพาทเล็กๆน้อยๆ กองกำลังที่น่ากลัวและพลังที่ไม่อาจจินตนาการได้กำลังรวมตัวกันเพื่อต่อสู้กับสิ่งชีวิตทั้งหมด ใครจะปกป้องเรา?"
  ap_galactic_contender_desc:0 "จักรวรรดิเก่าแก่ทรงพลังยึดติดอยู่กับซากปรักหักพังของอารยธรรมที่เสื่อมโทรมของพวกเขาและไม่เคยกลัวเผ่าพันธุ์ที่อายุน้อยกว่าและมีพลวัตมากขึ้นที่ล้อมรอบพวกเขา ช่วงเวลาของพวกเขาได้ผ่านไปนานแล้ว"
  ap_technological_ascendancy_desc:0 "เทคโนโลยีที่จะแยกไม่ออกจากเวทมนตร์ที่คนรุ่นก่อนอยู่ใกล้แค่เอื้อม ยุคแห่งเทคโนโลยีใหม่ได้เริ่มขึ้นแล้ว"
  ap_mastery_of_nature_desc:0 "แม้ว่าเราจะเข้าใจธรรมชาติของโลกของเรามานานแล้ว แต่สิ่งมีชีวิตต่างดาวที่เราได้พบกับความท้าทายใหม่ๆ พวกเขาก็จะเอาชนะได้เช่นกัน"
